change heading kinh-nghiem, y-kien

--- a/kinh-nghiem/chu-viet/web.html
+++ b/kinh-nghiem/chu-viet/web.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Web chữ Việt (Trang web LHBội)</title>
+<title>Web chữ Việt</title>
 <meta name="description" content="Web chữ Việt trong các bộ chữ khác nhau. Hãy chọn đúng Unicode khi ghi chữ Việt." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/chu-viet/web">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Web chữ Việt</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,8 @@ https://lehboi.github.io/kinh-nghiem/chu-viet/web
     </amp-facebook-like>
   </div>
 
-  <h1>Nhận xét</h1>
+  <h1>Web chữ Việt</h1>
+  <h2>Nhận xét</h2>
   <p>Bài viết này nêu lên nhận xét về chữ Việt trong máy tính. Chủ đề của bài này không phải là <em>Unicode là gì</em> mà là <em>Những gì không phải là Unicode</em>. Những đoạn trong bài viết hơi nhiều chi tiết về kỹ thuật sẽ được đánh dấu ▲, người đọc có thể bỏ qua nếu không muốn đi sâu vào chi tiết.</p>
   <p>Không biết trên thế giới có thứ chữ viết nào mà được thể hiện trong máy tính bằng nhiều cách như chữ Việt không? Trước khi chữ Việt được đưa vào Unicode và khi Unicode chưa được phổ biến trong các phần mềm thông dụng thì có tới vài chục cách để ghi chữ Việt trong máy tính. Nào là VNI, Bách Khoa, Lạc Việt, VSCII, ABC, VPS… (Xem phần cuối bài để biết thêm về chữ trong máy tính trước khi có Unicode.)
   <br>Việc chữ Việt được đưa vào Unicode đã làm giảm bớt tình trạng <em>thập nhị sứ quân</em> trong thế giới phần mềm Việt Nam. Nhưng cho tới lúc này vẫn còn rất nhiều người tiếp tục tạo ra những dòng chữ Việt trong máy tính theo những cách không phải Unicode.
@@ -307,7 +302,7 @@ data-ad-slot="3830899615">
   <br><u>Các web site chữ Việt dùng HTML entities</u>: google.com, acb.com.vn, vnexpress.net, www.htv.com.vn
   <br><u>Các web site chữ Việt dùng Windows-1252</u>: www.vietcombank.com.vn, www.vcbs.com.vn, vietnamgiapha.com, basao.com.vn, www.voh.org.vn
   <br><u>Các web site chữ Việt dùng Windows-1258</u>: livefeeling.com/viet/index.htm</blockquote>
-  <h5><a name="TOC-Nh-ng-nh-c-i-m-c-a-nh-ng-trang-web-kh-ng-d-ng-ng-UTF-8:"></a>Những nhược điểm của những trang web không dùng đúng UTF-8:</h5>
+  <h4><a name="TOC-Nh-ng-nh-c-i-m-c-a-nh-ng-trang-web-kh-ng-d-ng-ng-UTF-8:"></a>Những nhược điểm của những trang web không dùng đúng UTF-8:</h4>
   <blockquote>Nhược điểm thứ nhất là tốn chỗ, tốn thời gian truyền qua Internet.
   <br>Nhược điểm thứ hai đã nói ở trên là không đọc được nếu không có web browser.
   <br>Thậm chí một số web browser đặc biệt cũng không đọc được kiểu HTML entities trong các trang web chữ Việt theo Windows-1252 hay Windows-1258. Đó là những micro browser trong các máy điện thoại di động, do khả năng giới hạn nên nó chỉ đọc được đúng một loại Unicode. Như vậy những trang web chữ Việt theo Windows-1252 hay Windows-1258 sẽ <strong>không được xem trên các máy di động</strong>.</blockquote>
@@ -358,7 +353,7 @@ data-ad-slot="3830899615">
   </tbody>
   </table>
   <h3><a name="TOC-C-c-l-i-kh-c-trong-c-c-trang-web-Vi-t"></a>Các lỗi khác trong các trang web Việt</h3>
-  <h5><a name="TOC-L-i-vi-t-sai-c-c-k-hi-u-superscript-v-subscript"></a>Lỗi viết sai các ký hiệu superscript và subscript</h5>
+  <h4><a name="TOC-L-i-vi-t-sai-c-c-k-hi-u-superscript-v-subscript"></a>Lỗi viết sai các ký hiệu superscript và subscript</h4>
   <p>Các ký hiệu phải viết kiểu superscript và subscript như độ, mét vuông, mét khối rất thường gặp nhưng cũng rất thường bị viết một cách <strong>cẩu thả</strong> như:</p>
   <ul>
     <li>29oC hay 29OC thay vì <em>29<sup>o</sup>C</em>, hay <em>29°C</em></li>
@@ -399,7 +394,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
