--- a/kinh-nghiem/linh-tinh/ac-dc.html
+++ b/kinh-nghiem/linh-tinh/ac-dc.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>AC - DC</title>
+<title>Điện một chiều và điện xoay chiều</title>
 <meta name="description" content="Điện một chiều và điện xoay chiều" />
 <meta name="keywords" content="ac, dc, điện, một chiều, xoay chiều">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/ac-dc">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
-    <div class="title">Điện một chiều và điện xoay chiều</div>
-  <div class="right">Viết lần đầu trong Tháng Mười Một, 2020.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,12 +231,14 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
+  <h1>Điện một chiều và điện xoay chiều</h1>
+  <div class="right">Viết lần đầu trong Tháng Mười Một, 2020.</div>
   <p>Ngày xưa ông Tesla đã thắng ông Edison trong việc phát triển lưới điện. Ông Tesla làm lưới điện xoay chiều ba pha trong khi ông Edison làm lưới điện một chiều.</p>
-  <h1>Hai loại điện khác nhau thế nào?</h1>
+  <h2>Hai loại điện khác nhau thế nào?</h2>
   <p>Điện một chiều được phát ra từ nguồn điện có điện thế gần như không đổi. Ví dụ cục pin khô phát ra điện một chiều 1,5V, bình ắc-quy chì phát ra điện một chiều 12V, pin lithium phát ra điện một chiều 4V. Điện xoay chiều được phát ra từ nguồn điện có điện thế thay đổi đều đặn theo thời gian, đồ thị điện thế theo thời gian là một <a href="https://en.wikipedia.org/wiki/Sine_wave" target='_blank'>đường hình sin</a>. Ví dụ điện nhà 220V có điện thế thay đổi 50 lần mỗi giây từ +311V đến -311V rồi trở lại +311V. Điện một chiều được gọi tắt là DC (direct current), điện xoay chiều được gọi tắt là AC (altenating current).</p>
   <div style='background-color:white;'><amp-img src="/images/Sine_and_Cosine.svg" width="720" height="460" layout="responsive"></amp-img></div>
   <p>Ông Edison đã đúng khi nói rằng điện một chiều an toàn hơn điện xoay chiều ở cùng điện thế 120-240V. Khi người ta chạm vào nguồn điện một chiều điện thế 120-240V thì một dòng điện rất nhỏ cỡ chục milliampere chạy qua người. Dòng điện nhỏ vì điện trở ở da người khá lớn, nhất là khi da khô. Dòng điện một chiều cỡ chục milliampere chạy qua người không gây hại đáng kể cho con người. Nhưng nếu người ta chạm vào nguồn điện xoay chiều điện thế 120-240V thì dòng điện xoay chiều cỡ chục milliampere sẽ kích thích các bộ phận của cơ thể, bộ phận quan trọng nhất bị kích thích là quả tim. Quả tim người không thể co bóp theo tần số 50-60 lần mỗi giây của nguồn điện, nhanh gấp vài chục lần nhịp tim bình thường, hậu quả là tim ngừng đập.</p>
-  <h1>Tại sao điện xoay chiều được chọn?</h1>
+  <h2>Tại sao điện xoay chiều được chọn?</h2>
   <p>Để ít hao tốn điện khi truyền đi xa, người ta cần phải giảm dòng điện truyền trong dây dẫn mà không giảm lượng điện năng, tức là phải tăng điện thế lên cao. Người ta có thể nâng điện thế của nguồn điện xoay chiều lên vài trăm kilovolt để truyền đi xa và khi đến nơi tiêu thụ thì giảm điện thế xuống vài trăm volt để dùng. Ưu điểm của điện xoay chiều là dễ thay đổi điện thế. Việc tăng lên và hạ xuống điện thế của điện xoay chiều rất đơn giản và hiệu quả (ít hao tổn) nhờ các <a href="https://en.wikipedia.org/wiki/Transformer" target='_blank'>máy biến thế</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -271,7 +267,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <p>Hệ quả của việc chọn dùng điện xoay chiều trong lưới điện là việc phát triển các dụng cụ tiêu thụ điện xoay chiều: động cơ điện xoay chiều một pha hoặc ba pha, đèn huỳnh quang. Động cơ điện một pha được dùng rất nhiều trong các gia đình: quạt máy, máy bơm nước, tủ lạnh, máy lạnh… Động cơ điện ba pha được dùng nhiều trong các xưởng. Động cơ điện ba pha có hiệu suất cao hơn động cơ điện một pha.</p>
-  <h1>Truyền điện một chiều cao thế</h1>
+  <h2>Truyền điện một chiều cao thế</h2>
   <p>Theo thời gian, người ta phát minh ra những cách để đổi điện xoay chiều cao thế sang điện một chiều và ngược lại, và việc truyền điện một chiều cao thế đi xa lại hiệu quả hơn truyền điện xoay chiều ba pha. Một ưu điểm của truyền điện cao thế một chiều là không cần phải đồng bộ pha và tần số giữa hai đầu đường dây như truyền điện xoay chiều. Việc đồng bộ pha và tần số khi truyền điện xoay chiều làm cho việc nối máy phát điện vào mạng điện khó khăn và mất nhiều thời gian. Khi có <a href="https://vi.wikipedia.org/wiki/S%E1%BB%B1_c%E1%BB%91_m%E1%BA%A5t_%C4%91i%E1%BB%87n_mi%E1%BB%81n_Nam_Vi%E1%BB%87t_Nam_2013" target='_blank'>sự cố nghiêm trọng</a> làm cho tất cả các máy phát điện bị quá tải và ngắt ra khỏi mạng điện sẽ mất rất lâu để lần lượt nối từng máy phát điện trở lại.</p>
   <p>Khi truyền điện một chiều, người ta chỉ cần một sợi dây truyền điện đi (gọi là monopole), dòng điện quay về sẽ được truyền qua Trái Đất.</p> 
   <div style='background-color:white;'><amp-img src="/images/Hvdc_monopolar_schematic.svg" width="1250" height="450" layout="responsive"></amp-img></div>
@@ -305,7 +301,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Điện một chiều trong dân dụng</h1>
+  <h2>Điện một chiều trong dân dụng</h2>
   <p>Trong khi đó, ngày càng nhiều máy dùng điện trong gia đình cần dùng điện một chiều: radio, TV, ampli, đầu đọc đĩa, máy tính, lò microwave, bếp điện từ, điện thoại di động, đèn LED… Ngày càng nhiều máy dùng điện một chiều trong gia đình nhưng điện truyền vào nhà vẫn là điện xoay chiều như cả trăm năm trước. Mỗi máy dùng điện phải tự đổi điện xoay chiều ra điện một chiều để dùng. Việc đổi điện AC - DC đó được làm bên trong máy hoặc dùng một bộ biến đổi bên ngoài, gọi là adapter. Một xu hướng của nhiều máy dùng điện một chiều gần đây là dùng điện thế 5V ngang với điện thế trong lỗ cắm USB. Theo xu hướng đó, các nhà sản xuất làm ra nhiều dạng adapter đổi điện xoay chiều ra điện một chiều 5V: adapter rời, adapter gắn chìm trên tường, adapter kèm theo ổ cắm điện nối dài… Để cấp điện cho các máy cần nhiều điện qua USB, người ta đang bàn đến việc nâng điện thế trong lỗ cắm USB lên cao hơn 5V, lên đến 25V. Trong khi chưa có tiêu chuẩn chung về  điện thế cao hơn cho USB, các nhà sản xuất điện thoại di động đã làm ra các adapter quick charge có thể điều chỉnh điện thế lên 9V và 12V để sạc điện thoại nhanh hơn.</p>
   <p>Mặt khác, trong nhiều máy dùng điện một chiều ngày nay lại có mạch điện tử tạo ra dòng điện xoay chiều ba pha biến tần để cấp cho những động cơ cần thay đổi tốc độ quay và công suất. Ví dụ: máy lạnh biến tần, quạt làm mát trong máy tính.</p>
   <p>Nói thêm về cái adapter đổi điện xoay chiều thành điện một chiều. Ngày xưa, để đổi điện như vậy người ta phải dùng một máy biến thế công suất nhỏ để biến điện xoay chiều từ 120V-240V xuống thành điện xoay chiều điện thế thấp ví dụ 12V, sau đó dùng hai hoặc bốn diode để đổi chiều điện thế từ hình sin thành hai nửa hình sin cùng dấu, lúc này dòng điện chỉ chạy theo một chiều nhưng không được đều đặn mà tăng giảm theo nửa hình sin 100-120 lần mỗi giây. Dòng điện tăng giảm như vậy sẽ tạo ra tiếng u u ở những máy có loa hoặc tạo ra dợn sóng trên màn hình TV. Để giảm những điều không mong muốn đó thì người ta phải san phẳng điện thế cho bớt thay đổi kiểu nửa hình sin để cho dòng điện bớt tăng giảm, việc đó gọi là lọc. Bây giờ các adapter dùng mạch điện tử để đổi điện xoay chiều 120V-240V sang điện xoay chiều điện thế thấp nhưng tần số cao vài kilohertz trở lên, sau đó mới dùng diode để đổi ra điện một chiều điện thế thấp, adapter loại này có nhiều ưu điểm hơn loại cũ: gọn nhẹ, ít dợn sóng.</p>
@@ -336,7 +332,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
