--- a/kinh-nghiem/linh-tinh/anh.html
+++ b/kinh-nghiem/linh-tinh/anh.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Ảnh (Trang web LHBội)</title>
+<title>Ành</title>
 <meta name="description" content="Ghi chép linh tinh về ảnh và máy tính Linux" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/anh">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Ảnh</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,11 +230,11 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/anh
     </amp-facebook-like>
   </div>
 
-<h3>Chống ẩm cho máy ảnh</h3>
+  <h1>Ảnh</h1>
+<h2>Chống ẩm cho máy ảnh</h2>
 <div class="flright"><amp-img src="/images/PICT11596b20.jpg" width="300" height="400" layout="responsive"></amp-img>
 </div>
-<p>
-Độ ẩm tương đối ở Sài Gòn trong mùa mưa thay đổi trong khoảng 65% vào lúc trưa nắng tới 100% vào lúc sáng sớm. Lượng hơi nước trong không khí thì ít thay đổi nhưng độ ẩm tương đối giảm khi nhiệt độ tăng và tăng khi nhiệt độ giảm. Lúc sáng sớm, nhiệt độ không khí giảm thấp nhất trong ngày nên độ ẩm tương đối tăng lên. Khi độ ẩm tương đối tăng lên đến 100% thì hơi nước bắt đầu ngưng tụ thành nước. Ta có thể thấy nước ngưng tụ làm mờ các tấm kính.</p>
+<p>Độ ẩm tương đối ở Sài Gòn trong mùa mưa thay đổi trong khoảng 65% vào lúc trưa nắng tới 100% vào lúc sáng sớm. Lượng hơi nước trong không khí thì ít thay đổi nhưng độ ẩm tương đối giảm khi nhiệt độ tăng và tăng khi nhiệt độ giảm. Lúc sáng sớm, nhiệt độ không khí giảm thấp nhất trong ngày nên độ ẩm tương đối tăng lên. Khi độ ẩm tương đối tăng lên đến 100% thì hơi nước bắt đầu ngưng tụ thành nước. Ta có thể thấy nước ngưng tụ làm mờ các tấm kính.</p>
 <p>Nước ngưng tụ trong dụng cụ điện và điện tử sẽ làm hỏng chúng. Độ ẩm trên 60% có thể làm mốc ống kính máy ảnh. Để tránh cho máy ảnh bị hỏng vì hơi nước trong không khí thì phải chống ẩm cho nó. Cách chống ẩm chuyên nghiệp nhất là mua một tủ chống ẩm để cất máy ảnh.</p>
 <p>Tủ chống ẩm điện tử có một bộ phận nhỏ làm lạnh bằng <a href="https://en.wikipedia.org/wiki/Thermoelectric_cooling" target="_blank">hiệu ứng Peltier</a> để ngưng tụ nước trong tủ, sau đó thải nước đó ra ngoài qua dạng hơi. Độ ẩm bên trong tủ có thể được chọn từ bảng điều khiển. Giá của tủ chống ẩm từ 1,6 triệu đồng trở lên.</p>
 <p>Nếu chưa thể mua được tủ chống ẩm thì có thể làm theo cách đơn giản sau: dùng silica gel để làm khô không khí trong hộp kín. Trên thị trường có bán các hộp nhựa PP trong do Việt Nam sản xuất, có một lớp đệm cao su silicone quanh nắp, rất kín, có đủ cỡ từ 0,2l tới 8l. Trong hình bên cạnh là một hộp 4,5l để cất máy chụp ảnh, máy quay phim và các cuộn băng. Phần màu xanh dương quanh nắp là cao su silicone. Trong hộp có khoảng 50cc <a href="https://vi.wikipedia.org/wiki/Silica_gel" target="_blank">silica gel</a>. Đặt một ẩm kế vào trong hộp, sau nửa ngày kim ngừng lại ở vạch 40%, trong khi độ ẩm ngoài trời cao như đã ghi ở trên. Ẩm kế vỏ nhựa hình tròn, Made in China, mua ở tiệm bán dụng cụ y khoa, giá 50.000₫. Tất cả tốn chưa tới 100.000₫, lại không tốn điện.</p>
@@ -272,11 +266,12 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Quay JPEG file mà vẫn giữ nguyên Exif và chất lượng hình</h3>
+<h2>Quay JPEG file mà vẫn giữ nguyên Exif và chất lượng hình</h2>
 <pre>jpegtran -rotate {90|180|270} -copy all file.jpg &gt; output.jpg</pre>
 <pre>convert file.jpg -rotate {90|180|270} output.jpg</pre>
-<h3>Làm đĩa VCD, SVCD bằng máy Linux</h3>
-<ol><li>Dùng <a href="https://www.kinodv.org/" target="_blank">Kino</a> capture digital video qua IEEE1394 hoặc analog video qua <a href="https://www.linuxtv.org/" target="_blank">Video4Linux</a></li>
+<h2>Làm đĩa VCD, SVCD bằng máy Linux</h2>
+<ol>
+<li>Dùng <a href="https://www.kinodv.org/" target="_blank">Kino</a> capture digital video qua IEEE1394 hoặc analog video qua <a href="https://www.linuxtv.org/" target="_blank">Video4Linux</a></li>
 <li>edit video: cắt bỏ, sắp xếp, thêm các đoạn chuyển tiếp, lồng tiếng…</li>
 <li>lưu file kịch bản smil</li>
 <li>export ra MPEG (Kino gọi <a href="https://mjpeg.sourceforge.net/" target="_blank">mjpegtool</a>)</li>
@@ -287,11 +282,13 @@ data-ad-slot="3830899615">
 <p>Đổi file video từ NTSC qua PAL bằng ffmpeg?</p>
 <p>Thu hình từ V4L vào file bằng lavrec --software-encoding -f a -i p -t 5 -g720x576 -v 2 /opt/Videos/tst%02d.avi hoặc mencoder -endpos -ovc lavc -oac lavc -lavcopts vcodec=mpeg4:vbitrate=3000:acodec=mp2:threads=2 tv:// -tv driver=v4l2:freq=128.000:adevice=/dev/dsp:amode=0:decimation=1 -o ~/tv.avi (nhớ dùng alsamixer bật capture Line lên) DVD mpeg </p>
 <p>mencoder -v -endpos 10 -vf scale=720:576,harddup -of mpeg -mpegopts format=dvd -srate 48000 -ofps 25 -ovc lavc -oac lavc -lavcopts vcodec=mpeg2video:aspect=4/3:acodec=ac3:abitrate=192:vbitrate=4900:threads=2 tv:// -tv driver=v4l2:width=720:height=576:freq=192.000:adevice=/dev/dsp:amode=1:audiorate=48000:decimation=1 -o /opt/Videos/tv02.mpg</p>
-<h3>Dùng máy in-scan Epson Stylus CX-1500 với Fedora Core 5</h3>
+<h2>Dùng máy in-scan Epson Stylus CX-1500 với Fedora Core 5</h2>
 <p>Máy loại in và scan gọi là MFP: Multi Function Printer, hay là AiO: All in One.</p>
 <p>Máy được scan với backend snapscan của sane. Để scan được thì phải cài sane-backends 1.0.18. Máy này nối vào máy tính qua USB. udev daemon sẽ tạo các device node cho chức năng in và scan. Đó là các node:</p>
-<ul><li>/dev/usb/lp0 và các symbolic link /dev/par0, /dev/scanner-lp0</li>
-<li>/dev/bus/usb/00<i>x</i>/00<i>y</i> và symbolic link /dev/scanner-usbdev<i>x.y</i> trong đó x là BusId và y là DeviceId cấp cho USB device mỗi khi nối vào máy tính.</li></ul>
+<ul>
+  <li>/dev/usb/lp0 và các symbolic link /dev/par0, /dev/scanner-lp0</li>
+  <li>/dev/bus/usb/00<i>x</i>/00<i>y</i> và symbolic link /dev/scanner-usbdev<i>x.y</i> trong đó x là BusId và y là DeviceId cấp cho USB device mỗi khi nối vào máy tính.</li>
+</ul>
 <p>Ta có thể dùng <strong>scanimage</strong>, <strong>xsane</strong>, hoặc <strong>gimp plugin</strong> để scan.</p>
 <p>scanimage là command line tool, gõ lệnh theo dạng sau từ shell prompt: <br />
 <tt>scanimage -d snapscan:libusb:001:003 --format=tiff --resolution 150 --mode Color -x 130 -y 30 -y 55 &gt; file.tiff</tt> <br />
@@ -324,12 +321,11 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>In hình từ máy Linux</h3>
-<p>Có thể in từ gThumb. gThumb cho phép đặt lề, co giãn hình nhưng mỗi lần gThumb chỉ in có một bản. <br />
-Với máy in-scan kết hợp thì tôi có thể copy một tờ giấy mà không cần đến máy tính. Nhưng nếu muốn có nhiều bản copy giống nhau thì in từ máy tính nhanh hơn. Khi cần in nhiều bản giống nhau thì dùng GIMP để in. Trong cửa sổ in của GIMP không có ô cho chọn số bản in nhưng có ô để thay đổi dòng lệnh <b>lp</b>, chỉ cần thêm option -n cho lp là có thể in một lần được nhiều bản tuỳ thích. </p>
+<h2>In hình từ máy Linux</h2>
+<p>Có thể in từ gThumb. gThumb cho phép đặt lề, co giãn hình nhưng mỗi lần gThumb chỉ in có một bản. <br>Với máy in-scan kết hợp thì tôi có thể copy một tờ giấy mà không cần đến máy tính. Nhưng nếu muốn có nhiều bản copy giống nhau thì in từ máy tính nhanh hơn. Khi cần in nhiều bản giống nhau thì dùng GIMP để in. Trong cửa sổ in của GIMP không có ô cho chọn số bản in nhưng có ô để thay đổi dòng lệnh <b>lp</b>, chỉ cần thêm option -n cho lp là có thể in một lần được nhiều bản tuỳ thích. </p>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
