--- a/kinh-nghiem/linh-tinh/bep-3.html
+++ b/kinh-nghiem/linh-tinh/bep-3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bếp (3) (Trang web LHBội)</title>
+<title>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave (3)</title>
 <meta name="description" content="Trang 3: So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, bếp">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/bep-3">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Bếp (3)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,7 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/bep
     </amp-facebook-like>
   </div>
 
-  <h3>Dùng nồi nào?</h3>
+  <h2>Dùng nồi nào?</h2>
   <p>Dùng bếp điện từ và lò microwave thì tiết kiệm được tiền nhưng cần có những loại nồi thích hợp. Bếp điện từ chỉ dùng được với những nồi-chảo có đáy phẳng và nhiễm từ. Nồi inox dùng được với bếp điện từ có bề ngoài không khác gì nồi inox thường, cũng có loại một lớp đáy hay ba lớp đáy. Do đó, để mua nồi inox dùng với bếp điện từ thì phải xem kỹ chỉ dẫn trên bao bì hoặc phải thử trước khi mua.
 Nhiều người bán bếp điện từ vẫn tưởng lầm rằng nồi inox một lớp đáy thì dùng được với bếp điện từ và ba lớp đáy thì không được.</p>
   <p>Không được dùng những vật dụng bằng kim loại và những vật liệu hấp thụ sóng vi ba với lò microwave. Đồ đựng bằng kim loại sẽ phản xạ sóng vi ba nên sóng khó chạm tới thực phẩm và thực phẩm nóng chậm hơn. Vật dụng kim loại có đầu nhọn còn dễ phóng tia lửa điện trong lò microwave, nếu tia lửa điện gặp dầu-mỡ trong thực phẩm sẽ phát cháy rất nguy hiểm.
@@ -273,7 +267,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
