--- a/kinh-nghiem/linh-tinh/index.html
+++ b/kinh-nghiem/linh-tinh/index.html
@@ -65,7 +65,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -174,10 +174,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </div>
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
     <div class="title">Những kinh-nghiệm linh-tinh trong cuộc-sống</div>
@@ -201,21 +197,20 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <!-- body here -->
 <dl>
-  <dt><a href='/kinh-nghiem/linh-tinh/bep'>Bếp</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/bep'>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</a></dt>
   <dt><a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Tiêu thụ điện</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby tốn bao nhiêu?</a></dt>
   <dt><a href='/kinh-nghiem/linh-tinh/magchan'>Dùng thử Magchan để giặt</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/may-lanh'>Máy lạnh</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/may-lanh-inverter'>Máy lạnh inverter</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/nong'>Nóng</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ một ngày</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/may-lanh'>Hiểu rõ Máy lạnh</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/may-lanh-inverter'>Máy lạnh inverter có gì khác?</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/nong'>Bàn về tình trạng nóng</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a></dt>
   <dt><a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv'>Tần số của TV</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/anh'>Ảnh</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Hồng ngoại</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Chơi với tia hồng ngoại</a></dt>
 </dl>
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
