--- a/kinh-nghiem/linh-tinh/magchan.html
+++ b/kinh-nghiem/linh-tinh/magchan.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
-    <div class="title">Dùng thử Magchan để giặt</div>
-  <div class="right">Viết lần đầu trong Tháng Năm, 2020.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +231,8 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
+  <h1>Dùng thử Magchan để giặt</h1>
+  <div class="right">Viết lần đầu trong Tháng Năm, 2020.</div>
   <p><a href="https://magchan.com/" target='_blank'>Magchan</a> Magchan là sản phẩm dùng thay các chất tẩy rửa (detergent) để giặt, do một công ty Nhật sản xuất ra.
   Theo nhà sản xuất thì Magchan gồm rất nhiều hạt magnesium nguyên chất 99,95% đựng trong một túi lưới dầy.
   Cách dùng Magchan là cho một túi lưới chứa 100g hạt Mg đó vào máy giặt cùng với (không quá 5Kg) quần áo bẩn và cho máy giặt làm việc như thường mà không cần cho chất tẩy rửa (bột giặt, nước giặt…) và chất làm thơm (softener).</p>
@@ -402,7 +398,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
