--- a/kinh-nghiem/linh-tinh/may-lanh-2.html
+++ b/kinh-nghiem/linh-tinh/may-lanh-2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Máy lạnh (2) (Trang web LHBội)</title>
+<title>Hiểu rõ Máy lạnh (2)</title>
 <meta name="description" content="Trang 2: Những điều cần biết để dùng máy lạnh hiệu quả, an toàn" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/may-lanh-2">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Máy lạnh (2)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,7 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/may-lanh
     </amp-facebook-like>
   </div>
 
-  <h3>Dùng sai!</h3>
+  <h2>Dùng sai!</h2>
   <p>Rất nhiều người dùng máy lạnh tưởng rằng chọn mức nhiệt độ thấp hơn trên bộ điều khiển từ xa (ĐKTX) sẽ làm máy chạy <strong>mạnh</strong> hơn (tăng công suất) và phòng mau mát hơn. Điều này chỉ đúng khi dùng máy lạnh <a href="may-lanh-inverter">inverter</a>, không đúng khi dùng các loại máy lạnh thường; mà phần lớn máy lạnh đang dùng đều không phải loại inverter. Ngay cả khi dùng loại máy lạnh inverter thì điều trên cũng chỉ đúng trong một giới hạn nhỏ thôi, máy chỉ có thể giảm bớt công suất chứ không thể tăng công suất quá khả năng của nó. Khi thấy trong phòng không mát thì sẽ có người cầm ngay lấy bộ ĐKTX và chọn xuống 16℃! Họ không biết rằng công suất của máy lạnh là có hạn, khi trong phòng không đủ mát tức là máy lạnh không đủ sức làm mát cho phòng, dù cho chọn nhiệt độ 25℃ hay 16℃ cũng không thể thay đổi nhiệt độ thực tế.</p>
   <p>Trong trường hợp máy lạnh đủ công suất làm mát phòng thì nó cũng cần 15-30 phút để giảm nhiệt độ trong phòng bớt 1℃, nhiều người mở máy lên được vài phút chưa thấy mát liền lấy bộ ĐKTX và chọn xuống 16℃ cho mau mát! Đó cũng là cách dùng sai, dù cho chọn nhiệt độ 25℃ hay 16℃ thì phòng cũng không mau mát hơn. Trong trường hợp này, chọn nhiệt độ 16℃ còn tự gây phiền là sau đó lại phải mất công cầm bộ ĐKTX để tăng nhiệt độ lên và máy đã tốn không ít điện để làm mát phòng quá mức.</p>
   <p>Một cách dùng sai khác nữa là chọn nhiệt độ xuống thấp hơn để <i>bù</i> cho những nguồn nhiệt trong phòng. Ví dụ: khi có ít người trong phòng thì chọn nhiệt độ 25℃, khi có thêm người hay thêm máy trong phòng thì chọn nhiệt độ 20℃. Đúng ra thì người dùng không phải làm việc bù đó; máy lạnh sẽ tự làm bằng cách chạy máy nén nhiều thời gian hơn, nghỉ ít hơn. Nếu máy nén cứ chạy liên tục không nghỉ có nghĩa là nó đã làm việc hết công suất rồi, có chỉnh xuống 16℃ cũng không mát hơn tí nào.</p>
@@ -331,7 +325,7 @@ data-ad-slot="3830899615">
   <div class="center">sang trang <a href="may-lanh">1</a> - 2 - <a href="may-lanh-3">3</a></div>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
