--- a/kinh-nghiem/linh-tinh/may-lanh-inverter.html
+++ b/kinh-nghiem/linh-tinh/may-lanh-inverter.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Máy lạnh inverter (Trang web LHBội)</title>
+<title>Máy lạnh inverter có gì khác?</title>
 <meta name="description" content="Máy lạnh inverter tiết kiệm điện bằng cách nào?" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, máy lạnh, inverter">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/may-lanh-inverter">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Máy lạnh inverter</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,8 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/may-lanh-inverter
     </amp-facebook-like>
   </div>
 
-  <h3>Máy lạnh inverter tiết kiệm điện bằng cách nào?</h3>
+  <h1>Máy lạnh inverter có gì khác?</h1>
+  <h2>Máy lạnh inverter tiết kiệm điện bằng cách nào?</h2>
   <p>Các hãng sản xuất vẫn quảng cáo là máy lạnh inverter <a href="/huu-ich/chi-tieu">tiết kiệm</a> đến vài chục % tiền điện so với máy lạnh thường.</p>
   <p>Trong mỗi máy lạnh (loại 1 cục hay 2 cục, loại inverter hay loại thường đều như nhau) có 4 cái động cơ chính là động cơ nén, quạt làm mát dàn nóng, quạt đối lưu trong phòng và động cơ đảo hướng gió. Quạt đối lưu trong phòng thì quay không ngừng trong suốt thời gian dùng máy lạnh, theo tốc độ mà người dùng máy chọn (hoặc khi nhanh khi chậm trong chế độ auto). Động cơ đảo hướng gió thì ngừng hay chạy tùy theo người dùng chọn. Động cơ nén và quạt làm mát dàn nóng thì chạy hay nghỉ cùng lúc. Động cơ nén của máy lạnh loại thường sẽ chạy theo kiểu đóng/mở, tức là chạy ở công suất tối đa hoặc không chạy.</p>
   <p>Trong 4 động cơ đó, động cơ nén dùng nhiều điện nhất. Việc tiết kiệm điện tập trung vào chỗ này.</p>
@@ -316,7 +311,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
