--- a/kinh-nghiem/linh-tinh/may-lanh.html
+++ b/kinh-nghiem/linh-tinh/may-lanh.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Máy lạnh (Trang web LHBội)</title>
+<title>Hiểu rõ Máy lạnh</title>
 <meta name="description" content="Những điều cần biết để dùng máy lạnh hiệu quả, an toàn" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/may-lanh">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Máy lạnh</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,12 +230,13 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/may-lanh
     </amp-facebook-like>
   </div>
 
-  <h3>Máy lạnh là cái gì?</h3>
+  <h1>Hiểu rõ Máy lạnh</h1>
+  <h2>Máy lạnh là cái gì?</h2>
   <p>Máy điều hoà nhiệt độ là một cái <a href="https://en.wikipedia.org/wiki/Air_conditioner" target="_blank">bơm nhiệt</a>. Nó <i>bơm</i> nhiệt từ nơi có nhiệt độ thấp (nguồn nhiệt) sang nơi có nhiệt độ cao (nơi thoát nhiệt), ngược lại với sự truyền nhiệt tự nhiên, tương tự như máy <i>bơm</i> nước từ thấp lên cao.</p>
   <p>Ở những vùng khí hậu <a href="nong">nóng</a> quanh năm như miền Nam Việt Nam thì máy ĐHNĐ chỉ bơm nhiệt theo một chiều duy nhất là từ trong nhà ra ngoài trời, nên thường gọi là <i>máy lạnh</i>. Ở miền Bắc Việt Nam, máy ĐHNĐ bơm nhiệt theo hai chiều: mùa hè bơm nhiệt từ trong nhà ra ngoài trời, mùa đông bơm nhiệt từ ngoài trời vào trong nhà.</p>
-  <h4>Giới hạn</h4>
+  <h3>Giới hạn</h3>
   <p>Máy ĐHNĐ chỉ làm việc được khi nơi thoát nhiệt không nóng hơn 48℃ và nguồn nhiệt không lạnh hơn 5℃; vượt quá giới hạn đó thì máy ĐHNĐ không bơm nhiệt được. Như vậy, mở máy lạnh khi ngoài trời nóng khoảng 48℃ thì chỉ tốn điện vô ích. Tương tự, nếu nhiệt độ ngoài trời trong mùa đông thấp hơn 5℃ thì mở máy ĐHNĐ cũng vô ích. Một số máy ĐHNĐ sẽ tự động ngừng làm việc khi phát hiện ra tình trạng quá giới hạn đó. Có khi nhiệt độ không khí ngoài trời chưa tới 48℃ nhưng giàn nóng bị nắng rọi hoặc không đủ thoáng để thoát hơi nên nóng lên, do đó nên che nắng và thoát hơi cho giàn nóng.</p>
-  <h4>Công suất và hiệu suất</h4>
+  <h3>Công suất và hiệu suất</h3>
   <p>Công suất của máy ĐHNĐ thường được ghi theo đơn vị Btu/h. British thermal unit (Btu hay BTU): năng lượng cần thiết để 1 pound (454g) nước tăng lên 1℉. 1Btu ≈ 1055J = 0,293Wh. Máy ĐHNĐ nhỏ nhất thường thấy ở Việt Nam có công suất 9.000Btu/h (≈2,6375kW). Ở các nước khác có bán máy ĐHNĐ nhỏ hơn (khoảng 4.000-5.000Btu/h vừa đủ dùng cho 1 phòng khoảng 45㎥ hay 15㎡). Có lẽ ghi theo Btu/h thì có con số 9.000 đẹp hơn số 2,6375kW nên nhà sản xuất chỉ ghi theo Btu/h, mặc dù phần lớn người tiêu dùng Việt Nam không biết Btu/h là gì.
   <br>Một đơn vị khác liên quan đến máy lạnh là ton of refrigeration (tấn lạnh); đó là lượng nhiệt làm tan một short ton (907kg) nước đá chia cho số giây trong một ngày, một tấn lạnh tương đương 12.000Btu/h.</p>
   <p>Số Btu/h đó là công suất truyền nhiệt giữa hai phần của máy ĐHNĐ chứ không phải công suất tiêu thụ điện của máy. Công suất tiêu thụ điện của máy ĐHNĐ 9.000Btu/h khoảng 0,97kW; tức là hiệu suất của máy khoảng 2,72 lần. Máy tốt hơn-ít hao điện hơn thì hiệu suất có thể lên đến hơn 3 lần. Máy (có công suất) lớn hơn thường có hiệu suất cao hơn.
@@ -272,9 +267,9 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Máy lạnh inverter</h4>
+  <h3>Máy lạnh inverter</h3>
   <p>Các máy lạnh đời mới có mạch điện inverter, để điều chỉnh giảm được công suất, tạo cảm giác dễ chịu cho người dùng. Nhờ giảm được công suất nên khi đã đạt đến nhiệt độ đã chọn trước, máy lạnh <a href="may-lanh-inverter">inverter</a> sẽ tự giảm công suất sao cho lượng nhiệt bơm ra ngoài đúng bằng lượng nhiệt truyền vào phòng và sinh ra trong phòng, như vậy nhiệt độ trong phòng sẽ không thay đổi, rất dễ chịu cho người dùng. Còn loại máy lạnh thường sẽ ngưng bơm khi đã đạt đến nhiệt độ đã chọn, và lượng nhiệt bên ngoài truyền vào phòng cũng như sinh ra trong phòng sẽ làm nhiệt độ trong phòng tăng lên từ từ; khi nhiệt độ tăng cao hơn nhiệt độ đã chọn 1 độ, máy lạnh sẽ bắt đầu bơm nhiệt trở lại với công suất cố định của nó; vậy là nhiệt độ trong phòng sẽ lên xuống đều đặn quanh nhiệt độ đã chọn. Mặc dù nhiệt độ trong phòng chỉ thay đổi có 1 độ, nhưng những người nhạy cảm cũng sẽ cảm thấy không dễ chịu lắm.</p>
-  <h4>Làm khô không khí</h4>
+  <h3>Làm khô không khí</h3>
   <p>Một tác dụng phụ của máy lạnh là làm giảm độ ẩm không khí trong phòng, làm cho người cảm thấy dễ chịu hơn. Độ ẩm tương đối thích hợp cho người ở trong khoảng 30% tới 60%. Hầu hết các máy lạnh thời nay đều có chế độ làm khô không khí. Tuy nó thật sự làm giảm lượng hơi nước trong không khí nhưng nó không có bộ phận đo độ ẩm không khí, không có cách kiểm soát độ ẩm tương đối. Do đó nó chỉ làm việc theo một chu trình cố định là chạy máy bơm trong vài phút rồi ngừng bơm trong vài phút. Trong những phút máy bơm chạy, hơi nước trong không khí được làm lạnh trong máy sẽ ngưng tụ lại và chảy ra khỏi phòng theo ống dẫn. Tỉ lệ giữa thời gian chạy và thời gian ngừng máy bơm thay đổi theo nhiệt độ người dùng chọn trên bộ điều khiển từ xa. Với một <a href="nhiet-do">ẩm kế</a> rẻ tiền của Trung Quốc (ẩm kế và nhiệt kế chỉ kim, vỏ nhựa, giá 50.000₫), ta có thể dễ dàng thấy tác dụng phụ của máy lạnh. Độ ẩm tương đối trong mùa mưa ở Sài Gòn thay đổi trong khoảng 65% vào lúc trưa nắng tới 100% vào lúc sáng sớm.
   <br>Trong giờ làm việc buổi sáng, độ ẩm tương đối ngoài trời khoảng hơn 70%, trong phòng làm việc có nhiều người và máy tính toả nhiệt nên máy lạnh chạy liên tục và nhiệt độ trong phòng khoảng 26-28℃, độ ẩm khoảng 45-60%.
   <br>Sau 10 giờ tối, độ ẩm tương đối ngoài trời khoảng 80%, máy lạnh chạy chế độ làm khô không khí trong phòng chỉ làm giảm độ ẩm xuống khoảng 70%.</p>
@@ -307,7 +302,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
