--- a/kinh-nghiem/linh-tinh/nhiet-do.html
+++ b/kinh-nghiem/linh-tinh/nhiet-do.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Nhiệt độ (Trang web LHBội)</title>
+<title>Nhiệt độ suốt ngày ở Sài Gòn</title>
 <meta name="description" content="Dùng máy quay video ghi nhiệt độ suốt một ngày ở Sài Gòn" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/nhiet-do">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -140,6 +140,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -211,15 +212,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Nhiệt độ suốt ngày ở Sài Gòn</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,10 +231,11 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/nhiet-do
     </amp-facebook-like>
   </div>
 
+  <h1>Nhiệt độ suốt ngày ở Sài Gòn</h1>
   <p>Dùng máy camcorder Sony quay nhiệt kế-ẩm kế đặt ngoài trời xem nhiệt độ và độ ẩm tương đối thay đổi trong hơn 30 giờ liền từ lúc 6 giờ sáng ngày 3 Tháng Giêng 2008. Nhiệt độ tăng thì độ ẩm giảm và ngược lại.</p>
   <p>Nhiệt độ cao nhất lúc 13 giờ là 28℃, độ ẩm lúc đó là 53%. Sau 0 giờ, nhiệt độ ít thay đổi quanh 25℃, nhưng độ ẩm tăng nhanh từ 73% lên 80%.</p>
   <div align="center">
-  <h4><a href="https://youtu.be/DPI9rOkH4_o" target='_blank'>YouTube</a></h4>
+  <h2><a href="https://youtu.be/DPI9rOkH4_o" target='_blank'>YouTube</a></h2>
   <amp-youtube
     data-videoid="DPI9rOkH4_o"
     layout="responsive"
@@ -274,7 +269,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
