--- a/kinh-nghiem/linh-tinh/nong.html
+++ b/kinh-nghiem/linh-tinh/nong.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Nóng (Trang web LHBội)</title>
+<title>Bàn về tình trạng nóng</title>
 <meta name="description" content="Bàn về chủ đề Nóng ở xứ nhiệt đới, chống nóng, khai thác nắng." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, điện mặt trời">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/nong">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Nóng</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,8 +230,9 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/nong
     </amp-facebook-like>
   </div>
 
+  <h1>Bàn về tình trạng nóng</h1>
   <p>Trong tình hình trái đất ngày càng nóng lên và mật độ dân cư ở các đô thị ngày càng tăng thì việc chống nóng cho nhà ở và nơi làm việc là một việc rất cần thiết, dù cho ở vùng nhiệt đới hay ôn đới. Ở vùng nhiệt đới thì phải chống nóng quanh năm còn ở vùng ôn đới thì chống nóng vào mùa hè. Trong tự nhiên, sức nóng (hay là nhiệt năng) truyền từ nơi có nhiệt độ cao hơn sang nơi có nhiệt độ thấp hơn. Sức nóng truyền đi theo ba cách tuỳ thuộc vào vật chất mà nó truyền qua. Ba cách đó là dẫn nhiệt, đối lưu và bức xạ. Dẫn nhiệt là cách truyền nhiệt qua sự tiếp xúc của các phân tử nằm cạnh nhau trong vật chất. Đối lưu là cách truyền nhiệt bằng sự chuyển động của chất lỏng hay chất khí. Bức xạ là cách truyền năng lượng qua sóng điện từ, có thể truyền qua chân không. Chống nóng là cản không cho nhiệt năng truyền vào nơi sinh hoạt.</p>
-  <h3>Nóng từ đâu tới</h3>
+  <h2>Nóng từ đâu tới</h2>
   <p>Nguồn nhiệt lớn nhất trên mặt đất này chính là ánh nắng mặt trời. Vậy trong ánh nắng mặt trời có những gì?</p>
   <div><amp-img src="/images/SolarRadiation.png" width="800" height="595" layout="responsive"></amp-img></div>
   <p>Nhiệt độ bề mặt <a href="https://en.wikipedia.org/wiki/Solar_Radiation" title="Mặt trời" target='_blank'>Mặt trời</a> khoảng 5780°K, mặt trời phát (bức xạ) ra không gian chung quanh nó ánh sáng thấy được, tử ngoại (UV) và hồng ngoại. Đồ thị trên, được lấy từ https://en.wikipedia.org/wiki/Image:Solar_Spectrum.png, cho thấy cường độ của bức xạ mặt trời ở từng bước sóng, và sự hấp thụ năng lượng đó của tầng khí quyển.
@@ -302,7 +297,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>Chống nóng</h3>
+  <h2>Chống nóng</h2>
   <p>Cách chống nóng <i>hiện đại</i> (hại điện) nhất trong phần lớn các công trình xây dựng ở Việt Nam hiện nay là dùng máy lạnh. Xem bài viết về <a href="may-lanh" target="_blank">máy lạnh</a> và những điều cần biết.</p>
   <p>Để có một chút cảm nhận cụ thể hơn về sức nóng của ánh nắng và sự hại điện của máy lạnh, ta thử xem một ví dụ sau:</p>
   <blockquote>Một căn phòng có diện tích 10m² (<i>rất nhỏ</i>) có trần là mái bằng bê tông chịu nắng trực tiếp, gắn một máy lạnh cỡ 9.000BTU/h. Máy lạnh cỡ đó có công suất tiêu thụ gần 1kW điện và chỉ có thể bơm được không quá 3kW sức nóng ra khỏi phòng. Trong khi đó mái bằng nhận từ mặt trời hơn 10kW sức nóng lúc nắng gắt, và truyền vào trong phòng hơn 5kW (giả sử nhiệt độ mặt trên mái bằng lớn hơn mặt dưới 10℃). Đó là chưa kể sức nóng truyền vào phòng qua tường, sức nóng do người và máy móc trong phòng toả ra. Kết quả là vào mỗi buổi trưa, dù cho máy lạnh chạy hết sức, nhiệt độ không khí trong phòng vẫn có thể cao hơn nhiệt độ không khí ngoài trời vài ℃. Cứ tưởng tượng như đang ngồi trong phòng đóng kín với một cái bếp điện 2kW được mở suốt vài giờ thì sẽ hiểu tại sao trong phòng có máy lạnh mà vẫn nóng đến như vậy. Nếu phòng được cách nhiệt tốt thì máy lạnh cỡ đó có thể dễ dàng làm mát cho thể tích 90m³ tức là diện tích phòng khoảng 30m². Như vậy mới thấy không phải lúc nào cũng có thể dùng máy lạnh để chống nóng và việc thiết kế chống nóng công trình xây dựng sẽ giúp tiết kiệm điện đến mức nào. Ngày nào ngành điện cũng phát thông điệp <i>hãy sử dụng điện tiết kiệm</i> trên các kênh truyền hình nhưng không chỉ cho người tiêu thụ biết cách <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a> điện cho máy lạnh như thế nào.</blockquote>
@@ -334,7 +329,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Nắng xuyên kính</h4>
+  <h3>Nắng xuyên kính</h3>
   <p>Kính ngày càng được dùng nhiều cho cửa sổ và cửa đi. Đối với cửa kính thì ngoài việc dẫn nhiệt qua thuỷ tinh, nhiệt còn được truyền qua sự bức xạ (tia nắng). Các loại cửa kính hộp (2 lớp kính) có tính cách âm và cách nhiệt tốt nhưng không thể ngăn được sức nóng đi vào nhà qua ánh nắng; chúng thích hợp khi dùng ở các xứ ôn đới: ngăn không cho hơi ấm trong nhà truyền ra ngoài qua cửa kính trong mùa đông. Khi tia nắng đã đi qua cửa kính vào nhà, nó làm nóng vật trong nhà lên. Vật nóng lên sẽ phát ra tia <a href="hong-ngoai">hồng ngoại</a> có bước sóng dài, tia này bị phản xạ ở bề mặt kính nên không thoát ra ngoài nhà được làm cho nhà mau nóng hơn. Cách đơn giản và ít tốn kém nhất để chống nóng đi qua cửa kính là che nắng: trồng cây hoặc làm mái che hướng nắng. Để có tác dụng chống nóng thì phải che nắng bên ngoài cửa kính, còn rèm treo bên trong cửa kính chỉ làm đỡ chói mắt chứ tác dụng chống nóng rất kém.
   <br>Ở những văn phòng hay chung cư cao tầng, không thể dùng cách che nắng bên ngoài, thì có thể dùng kính phản quang hoặc các tấm phim dán kính. Các loại kính phản quang được tráng một lớp kim loại thật mỏng, có tác dụng phản xạ một phần ánh sáng nhưng không ngăn được phần UVA đi vào nhà. Tuỳ theo công nghệ sản xuất, lớp kim loại tráng mỏng đó có thể rất dễ bị hỏng khi lau kính không đúng cách. Phim dán kính thì có rất nhiều loại: loại phim màu không có hoa văn, loại có hoa văn không màu, loại phản quang-chống nóng. Loại phim hoa văn không màu không có tác dụng chống nóng. Loại phim màu sẽ hấp thụ một phần ánh sáng, nhiều hay ít tuỳ theo màu đậm hay nhạt. Khi hấp thụ ánh sáng thì năng lượng của ánh sáng sẽ giảm đi nhưng chính tấm phim sẽ nóng lên, hơi nóng đó sẽ truyền một phần nhỏ ra ngoài qua tấm kính và một phần ở lại trong phòng. Loại phim phản quang thì kết hợp cả hai tác dụng: phản xạ một phần ánh sáng ra ngoài và hấp thụ một phần ánh sáng cho nên nó giảm năng lượng ánh sáng vào phòng mà tự nó không nóng lên nhiều như loại phim màu. Có loại phim còn được trộn chất ngăn tia UV trong lớp keo dán để bảo vệ keo dán không bị lão hoá theo thời gian và đồng thời ngăn tia UV vào nhà.</p>
   <blockquote>Xin nêu lên một trường hợp đã dùng phim phản quang NV15 của 3M. Theo giới thiệu của 3M, phim này ngăn được 99% UV, 85% ánh sáng thấy được, 75% năng lượng trong ánh nắng. Nhìn từ trong nhà ra ngoài qua cửa kính có dán phim vẫn thấy màu sắc tự nhiên nhưng không chói mắt. Tia nắng xuyên qua cửa kính vào nhà vẫn rọi thành vệt trên sàn nhà nhưng vệt nắng đó không còn nóng nữa và không có thành phần UV (kính đeo mắt đổi màu - photochromic lense không bị sẫm màu trong vệt nắng đó). Một căn chung cư có trần cao 4,8m, tường hướng Bắc dài 11,6m, tường hướng Tây dài 7,2m, tường gạch và beton dầy 30cm, tổng diện tích cửa kính 14m². Trước khi dán phim lúc trời nắng nhất thì nhiệt độ trong nhà cao hơn ngoài trời 1-2℃, sau khi dán phim lên cửa kính thì nhiệt độ trong nhà bằng hoặc thấp hơn 1-2℃ so với bên ngoài lúc trời nắng.</blockquote>
@@ -366,7 +361,7 @@ data-ad-slot="3830899615">
 
   <p>Ngoài việc lựa chọn vật liệu cách nhiệt để xây nhà, ta còn phải để ý đến việc kiểm soát không khí ra vào nhà. Phải làm các khe cửa thật khít để khi đóng cửa thì rất ít không khí ra vào được, tránh sự truyền nhiệt bằng đối lưu qua các khe đó. Không khí đối lưu thì truyền nhiệt tốt hơn gấp 5 lần không khí lặng. Nhà được cách nhiệt tốt và có ít khe hở thì tốt cho việc chống nóng cũng như sưởi ấm. Vài chục năm trước, khi khí hậu ở miền Nam còn chưa quá nóng, thì dân ta vẫn quan niệm rằng nhà ở miền Nam không cần làm kín. Bây giờ máy lạnh đang trở nên phổ biến trong nhiều nhà ở, văn phòng thì quan niệm đó cần phải thay đổi. Nhà phải thoáng khi mở cửa nhưng khi đóng cửa thì phải kín.</p>
   <p>Một điều quan sát được về nhiệt độ không khí nhà chung cư: nhiệt độ không khí trong nhà chung cư rất ít thay đổi trong suốt ngày. Ví dụ trong tháng 3 năm 2008, nhiệt độ không khí ở thành phố Hồ Chí Minh thay đổi từ 23℃ đến 33℃, nhiệt độ trong nhà đóng kín cửa (cửa có dán phim chống nóng 3M) và không mở máy lạnh luôn luôn ở khoảng 29℃. Đó là nhờ căn nhà này không bị nắng rọi trên mái, cửa sổ và cửa đi rất kín; việc trao đổi nhiệt giữa bên trong và bên ngoài nhà rất ít nên nhiệt độ bên trong ít thay đổi theo nhiệt độ bên ngoài.</p>
-  <h3>Ẩm</h3>
+  <h2>Ẩm</h2>
   <p>Một yếu tố khí hậu khác ảnh hưởng đến cảm giác nhiệt độ của người là độ ẩm không khí. Độ ẩm không khí thường được chỉ thị qua <a href="https://en.wikipedia.org/wiki/Relative_humidity" target="_blank">độ ẩm tương đối</a>. Độ ẩm không khí ảnh hưởng đến cảm giác nhiệt độ của người vì người tự làm mát mình bằng cách tiết mồ hôi, mồ hôi bay hơi sẽ mang theo nhiệt năng làm người mát. Mồ hôi tiết ra mà không bay hơi được thì người không mát. Để cho mồ hôi bay hơi được thì không khí phải còn chứa thêm được hơi nước tức là độ ẩm tương đối trong không khí phải đủ thấp. Người ta cảm thấy thoải mái dễ chịu khi độ ẩm tương đối không khí trong khoảng 40% tới 60%. Độ ẩm tương đối cao thì mồ hôi khó bay hơi, cảm giác nóng của người càng tăng, mồ hôi đổ ra càng nhiều. Nhưng độ ẩm thấp quá cũng không dễ chịu: người ta bị khô da, khô mắt, tĩnh điện dễ tích lại đến một điện thế cao. Cảm giác nóng kết hợp giữa nhiệt độ và độ ẩm cũng được ghi với đơn vị ℃. Có một số công thức để tính <a href="https://en.wikipedia.org/wiki/Heat_index" target="_blank">cảm giác nóng</a> đó. Để cho mọi người dễ hiểu, cảm giác nóng cũng được ghi hẳn vào trong các <a href="https://www.weather.com/outlook/travel/businesstraveler/local/VMXX0007" target="_blank">dự báo thời tiết</a> ở nhiều nơi; ở Việt Nam chưa ghi như vậy.</p>
   <p>Bảng dưới đây cho thấy ảnh hưởng của cảm giác nóng lên cơ thể người</p>
   <table>
@@ -421,7 +416,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>Khai thác sức nóng</h3>
+  <h2>Khai thác sức nóng</h2>
   Với ngân sách đầu tư lớn hơn cho xây dựng công trình thì không những ta có thể ngăn không cho sức nóng của mặt trời vào nhà mà còn có thể bắt nó sinh ra <a href="/huu-ich/de-tien-vao-dau">tiền</a> trong suốt thời gian sử dụng công trình. Đó là dùng máy nước nóng năng lượng mặt trời. Nhiều tiền hơn nữa thì dùng những tấm lợp, tấm <i>ngói</i> và tấm <i>kính</i> phát điện. Những tế bào quang điện được phủ lên nửa tấm ngói, sau khi lợp ngói xong, nối dây dẫn điện từ những tấm ngói đó vào một bộ đổi điện (inverter) để đổi điện một chiều (DC) thành điện xoay chiều (AC) và hoà vào mạng điện trong nhà. Mỗi m² mái ngói sẽ sinh ra được khoảng 100W điện khi có nắng. Một mái nhà 60m² sẽ phát ra 6kW, mỗi tháng phát được hơn 1.000kWh, vừa dư điện dùng vừa mát nhà! Nếu lúc có nắng mà trong nhà dùng không hết lượng điện đó thì lượng điện dư sẽ chảy ra lưới điện chung qua đồng hồ điện, làm cho đồng hồ quay lùi. Buổi tối, không có điện mặt trời, điện từ lưới điện chung đi vào nhà sẽ làm cho đồng hồ quay tới. Như vậy lưới điện chung được dùng như một bộ accu dung lượng vô cùng lớn mà không tốn tiền đầu tư. Ở Việt Nam đã có nhiều nơi sản xuất hệ thống điện mặt trời nhưng vẫn còn các nhược điểm sau:
   <ul>
     <li>bộ pin quang điện chỉ có một dạng duy nhất là bảng gắn trên khung nhôm nên chỉ có một cách lắp đặt là đặt lên trên mái nhà: kém mỹ thuật và hạn chế phạm vi ứng dụng.</li>
@@ -429,7 +424,7 @@ data-ad-slot="3830899615">
   </ul>
   <p>Chính sách mới: Ngày 11/04/2017, Thủ tướng đã ra quyết định số <a href="https://vanban.chinhphu.vn/portal/page/portal/chinhphu/hethongvanban?class_id=1&mode=detail&document_id=189336" target='_blank'>11/2017/QĐ-TTg</a> buộc EVN mua lại điện mặt trời từ dân.</p>
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
