--- a/kinh-nghiem/linh-tinh/tan-so-cua-tv.html
+++ b/kinh-nghiem/linh-tinh/tan-so-cua-tv.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tần số của TV (Trang web LHBội) </title>
+<title>Tần số của TV</title>
 <meta name="description" content="Phân biệt các con số về tần số của TV, LCD, plasma" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/tan-so-cua-tv">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Tần số của TV</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/tan-so-cua-tv
     </amp-facebook-like>
   </div>
 
+  <h1>Tần số của TV</h1>
   <p>Nếu đang chọn mua một cái TV LCD hoặc Plasma bạn sẽ phải bối rối trước các con số Hz khác nhau liên quan đến các TV này. Bài này tóm tắt những thông tin chính về các con số đó.</p>
   <p>Để cho vấn đề được trình bày có đầu, có đuôi, chúng ta sẽ bắt đầu từ một con số có từ trước khi có cái TV đầu tiên trên thế giới: đó là 24 hình mỗi giây.
   <br>Đa số phim nhựa được chiếu lên màn ảnh ở tốc độ 24 hình mỗi giây. Lúc ban đầu, phim chưa có tiếng thì có thể được chiếu ở tốc độ khoảng 16-23 hình mỗi giây, đủ cho người xem có cảm giác hình ảnh chuyển động tự nhiên. Từ những năm 1920, khi bắt đầu sản xuất phim có tiếng thì tốc độ được chọn là 24 hình mỗi giây. 24 là con số nhỏ nhất để tiếng trong phim có chất lượng đủ tốt. (<a href="https://en.wikipedia.org/wiki/Film" target="_blank">Xem wikipedia</a>)</p>
@@ -309,7 +304,7 @@ Nếu TV không có chế độ 24p thì nguồn phát (máy phát đĩa Blue-ra
   <p>Bài này đã được gửi vào diễn đàn <a href="https://www.hdvietnam.com/diendan/31-hd-cho-nguoi-moi-bat-dau/40977-cac-con-so-hz-quanh-nhung.html" target="_blank">hdvietnam.com</a> ngày 29-12-2009.</p>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
