--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -204,14 +204,12 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dt><a href='cryptocurrency'>Tìm-hiểu Bitcoin</a></dt>
   <dt><a href="/kinh-nghiem/may-tinh/vi-dien-tu">Nhận-xét các ví-điện-tử</a></dt>
   <dt><a href='gnucash'>GnuCash</a></dt>
-  <dt><a href='bat-dau-gnucash'>Bắt-đầu dùng GnuCash</a></dt>
   <dt><a href='ham-tai-chinh'>Các phép-tính-tài-chính cần biết</a></dt>
   <dt><a href='roaming'>Wi-Fi Roaming</a></dt>
   <dt><a href='tien-ich-di-dong'>Tiện-ích-di-động</a></dt>
   <dt><a href='OTT-apps'>OTT app để liên-lạc</a></dt>
+  <dt><a href='RCS'>Dịch vụ tin nhắn RCS</a></dt>
   <dt><a href='conferencecall'>Conference Call</a></dt>
-  <dt><a href='goi-cuoc-di-dong-noi-mang'>Gói-cước-di-động nội-mạng</a></dt>
-  <dt><a href='cashflow'>Trò-chơi học-làm-giàu Cashflow</a></dt>
   <dt><a href='tai-khoan-google'>Tạo tài-khoản Google</a></dt>
   <dt><a href='googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a></dt>
   <dt><a href='spam-call'>Chặn những cuộc-gọi-tiếp-thị</a></dt>
@@ -221,14 +219,12 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dt><a href='in-sach-nho'>In sách nhỏ</a></dt>
   <dt><a href='linux'>Linux</a></dt>
   <dt><a href='toys'>Home server cũ</a></dt>
-  <dt><a href='nhiet-do'>Nhiệt độ CPU</a></dt>
-  <dt><a href='in-phun'>Máy in phun</a></dt>
-  <dt><a href='fax'>Fax từ Linux</a></dt>
   <dt><a href='oss'>Phần-mềm-mã-nguồn-mở</a></dt>
   <dt><a href='phan-mem-tu-do'>Phần-mềm-tự-do</a></dt>
+  <dt><a href='cashflow'>Trò-chơi học-làm-giàu Cashflow</a></dt>
 </dl>
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
