--- a/sitemap.html
+++ b/sitemap.html
@@ -199,13 +199,13 @@ div.footer { font-size: 80%; color: red; text-align: center; }
         <a href='/huu-ich/cau-chuyen/dung-the-tin-dung-khon-ngoan'>Dùng thẻ-tín-dụng một cách khôn-ngoan</a><br>
         <a href='/huu-ich/cau-chuyen/mua-nha-hay-dau-tu'>Để tiền mua-nhà hay đầu-tư</a><br>
         <a href='/huu-ich/cau-chuyen/kakeibo'>Tiết-kiệm tiền kiểu Nhật</a><br>
-        <a href='/huu-ich/cau-chuyen/bot-lo-ve-tien'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a><br>
+        <a href='/huu-ich/cau-chuyen/bot-lo-ve-tien'>Sáu điều giúp tôi bớt lo-lắng về tiền-bạc</a><br>
         <a href='/huu-ich/cau-chuyen/sinh-lao-benh-tu'>Sinh Lão Bệnh Tử</a>
 
   <h3 class="myheader">Kinh-nghiệm</h3>
     <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
 
-      <a href='/kinh-nghiem/may-tinh/protect'>Bảo-vệ tài-sản-số</a><br>
+      <a href='/kinh-nghiem/may-tinh/protect'>Bảo-vệ tài-sản-số-hoá</a><br>
       <a href='/kinh-nghiem/may-tinh/cloudstorage'>Kinh-nghiệm dùng cloud storage</a><br>
       <a href='/kinh-nghiem/may-tinh/privcloudstor'>Hướng-dẫn làm cloud storage server</a><br>
       <a href='/kinh-nghiem/may-tinh/pi-network'>Tiền-mật-mã Pi</a><br>
@@ -216,16 +216,17 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/may-tinh/roaming'>Wi-Fi Roaming</a><br>
       <a href='/kinh-nghiem/may-tinh/tien-ich-di-dong'>Tiện-ích-di-động</a><br>
       <a href='/kinh-nghiem/may-tinh/OTT-apps'>OTT app để liên-lạc</a><br>
+      <a href='/kinh-nghiem/may-tinh/RCS'>Dịch vụ tin nhắn RCS</a><br>
       <a href='/kinh-nghiem/may-tinh/conferencecall'>Conference Call</a><br>
-      <a href='/kinh-nghiem/may-tinh/cashflow'>Trò-chơi học-làm-giàu Cashflow</a><br>
       <a href='/kinh-nghiem/may-tinh/tai-khoan-google'>Tạo tài-khoản Google</a><br>
       <a href='/kinh-nghiem/may-tinh/googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a><br>
       <a href='/kinh-nghiem/may-tinh/spam-call'>Chặn những cuộc-gọi-tiếp-thị</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam'>Spam</a><br>
+      <a href='/kinh-nghiem/may-tinh/spam'>Những cách chặn spam mail</a><br>
       <a href='/kinh-nghiem/may-tinh/raspberrypi'>RaspberryPi</a><br>
       <a href='/kinh-nghiem/may-tinh/toys'>Home server cũ</a><br>
       <a href='/kinh-nghiem/may-tinh/oss'>Phần-mềm-mã-nguồn-mở</a><br>
-      <a href='/kinh-nghiem/may-tinh/phan-mem-tu-do'>Phần-mềm-tự-do</a>
+      <a href='/kinh-nghiem/may-tinh/phan-mem-tu-do'>Phần-mềm-tự-do</a><br>
+      <a href='/kinh-nghiem/may-tinh/cashflow'>Trò-chơi học-làm-giàu Cashflow</a>
 
     <h4 class="myheader"><a href='/kinh-nghiem/chu-viet/'>Chữ-Việt</a></h4>
 
@@ -236,28 +237,28 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
     <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
 
-      <a href='/kinh-nghiem/linh-tinh/bep'>Bếp</a><br>
+      <a href='/kinh-nghiem/linh-tinh/bep'>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</a><br>
       <a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Tiêu thụ điện</a><br>
-      <a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby</a><br>
+      <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a><br>
+      <a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby tốn bao nhiêu?</a><br>
       <a href='/kinh-nghiem/linh-tinh/magchan'>Dùng thử Magchan để giặt</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh'>Máy lạnh</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh-inverter'>Máy lạnh inverter</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nong'>Nóng</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ một ngày</a><br>
+      <a href='/kinh-nghiem/linh-tinh/may-lanh'>Hiểu rõ Máy lạnh</a><br>
+      <a href='/kinh-nghiem/linh-tinh/may-lanh-inverter'>Máy lạnh inverter có gì khác?</a><br>
+      <a href='/kinh-nghiem/linh-tinh/nong'>Bàn về tình trạng nóng</a><br>
+      <a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a><br>
       <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv'>Tần số của TV</a><br>
-      <a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Hồng ngoại</a>
+      <a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Chơi với tia hồng ngoại</a>
 
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
 
-    <a href='/y-kien/su-giau-co'>Nguồn gốc sự giàu có</a><br>
+    <a href='/y-kien/su-giau-co'>Các nguồn gốc của sự giàu có</a><br>
     <a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay</a><br>
-    <a href='/y-kien/xa-hoi-thong-tin'>Xã-hội thông-tin</a><br>
-    <a href='/y-kien/bi-mat-doi-tu'>Bí-mật đời-tư</a><br>
+    <a href='/y-kien/xa-hoi-thong-tin'>Viễn cảnh: Một xã hội thông tin ở Việt Nam</a><br>
+    <a href='/y-kien/bi-mat-doi-tu'>Bàn về Bí-mật đời-tư</a><br>
     <a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a><br>
     <a href='/y-kien/muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a><br>
     <a href='/y-kien/thanh-ngu-ve-tien'>Thành ngữ về tiền</a><br>
-    <a href='/y-kien/gia-tra'>Giả trá</a><br>
+    <a href='/y-kien/gia-tra'>Thế giới đầy những giả trá</a><br>
     <a href='/y-kien/nhung-cai-nem'>Những cái nêm</a><br>
     <a href='/y-kien/khac-nguoi'>Khác người</a><br>
     <a href='/y-kien/da-len-bao'>Những ý-kiến đã đăng báo</a>
