--- a/y-kien/bat-ca-hai-tay.html
+++ b/y-kien/bat-ca-hai-tay.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bắt cá hai tay (Trang web LHBội)</title>
+<title>Bắt cá hai tay</title>
 <meta name="description" content="Bắt cá hai tay nghĩa là gì? Có nên bắt cá hai tay?" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, Bắt cá hai tay">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/bat-ca-hai-tay">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Bắt cá hai tay</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,8 +230,9 @@ https://lehboi.github.io/y-kien/bat-ca-hai-tay
     </amp-facebook-like>
   </div>
 
+  <h1>Bắt cá hai tay</h1>
 <p>Nhiều người vẫn hiểu thành ngữ <b>Bắt cá hai tay</b> theo cách nôm na là dùng <i>tay</i> bắt con <i>cá</i>, rồi còn suy diễn thêm là dùng hai tay bắt một con cá hay là dùng hai tay bắt hai con cá… Tôi thì thích <a href="https://www.bachkhoatrithuc.vn/encyclopedia/4324-1528-633778083374062500/Hoi-dap-Dong-Tay/Bat-ca-hai-tay-hay-bat-ca-hai-tay.htm" target="_blank">cách giải nghĩa của học giả An Chi</a> hơn. Theo nghĩa này thì cá là <i>cá cược</i>, bắt cá hai tay là cá cược cùng lúc hai bên.</p>
-<h4>Tại sao lại bắt cá cùng lúc hai bên?</h4>
+<h2>Tại sao lại bắt cá cùng lúc hai bên?</h2>
 <p>Cá cược là một việc có tính chất may rủi. Ta không thể kiểm soát hoàn toàn kết quả, vì nếu như vậy là gian lận, ai muốn bắt cá với ta nữa. Bởi vì không thể kiểm soát hoàn toàn kết quả nên không thể chắc thắng mười mươi, vẫn luôn luôn có nguy cơ thua. Người khôn ngoan sẽ nghĩ đến việc giảm bớt thiệt hại khi thua cược bằng cách bắt cá hai tay. Cá cược cùng lúc hai bên một cách khôn khéo thì không bao giờ thua đậm.
 <br>Ví dụ đơn giản như anh X đoán đội A sẽ thắng và đặt cược 1 triệu đồng ăn 5 triệu đồng vào đội A; tuy nhiên để hạn chế nguy cơ bị thua mất 1 triệu đồng khi đội B thắng, X tiếp tục đặt cược 2 triệu đồng ăn 3 triệu đồng vào đội B, như vậy A hay B thắng thì X đều không mất tiền. Ví dụ trên chỉ là ví dụ đơn giản chưa tính đến trường hợp A và B hoà nhau, nếu tính kỹ như vậy thì phải bắt cá ba tay.
 <br>Như vậy, ở một khía cạnh nào đó thì bắt cá hai tay là một <i>hành động có suy tính khôn ngoan khi đối mặt với tình huống không chắc chắn</i> chứ không phải là biểu hiện của kẻ xảo trá, hai mặt.</p>
@@ -271,16 +266,16 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h4>Nhưng đó mới là một bên của cá cược, còn bên kia đâu cho đúng là bắt cá hai tay?</h4>
+<h2>Nhưng đó mới là một bên của cá cược, còn bên kia đâu cho đúng là bắt cá hai tay?</h2>
 <p>Mọi người đều luôn luôn cá cược với ông trời về <i>tương lai</i> của mình (thật là lạ, có những thứ của mình nhưng mình không thể kiểm soát hoàn toàn).
 Mỗi người đều <a href="/huu-ich/cau-chuyen/sinh-lao-benh-tu">không thể biết</a> được khi nào thì bệnh tật hay tai nạn sẽ xảy ra với mình, khi nào thì mình chết. Trong màn cá cược với ông trời, khi con người thắng thì chẳng cảm thấy nhận được thêm thứ gì vì tất cả những thứ có được đều do công sức bỏ ra mới có, còn khi con người thua thì thiệt hại có thể từ nhẹ tới mức nghiêm trọng như thân thể tàn tạ, tương lai con cái u ám vì gia đình khánh kiệt…
 <br>Vậy thì người khôn ngoan sẽ bắt cá hai tay: một bên là bắt cá với ông trời một cách <i>bắt buộc</i>, một bên là bắt cá với công ty bảo hiểm một cách <i>tự nguyện</i>. Nếu thắng ông trời thì thua công ty bảo hiểm, mất cho công ty bảo hiểm một ít tiền, số tiền đó được công ty bảo hiểm góp lại chung cho những người thua ông trời, những người kém may mắn hơn mình. Nếu đã bắt cá hai tay rồi mà lỡ thua ông trời thì phần thiệt hại sẽ bớt nghiêm trọng hơn do đã được công ty bảo hiểm chung cho một số tiền.</p>
-<h4>Ai cần phải cá cược với công ty bảo hiểm nhất?</h4>
+<h2>Ai cần phải cá cược với công ty bảo hiểm nhất?</h2>
 <p>Những người đang là chỗ bám víu cho người khác tồn tại và vươn lên, những người đang đem tiền về cho người thân dùng hàng ngày, cho con cái đi học cần phải cá cược với công ty bảo hiểm nhất.
 <br>Những người độc thân không phải chu cấp cho ai nhưng chưa có một tài sản đủ lớn để đương đầu với những việc không mong muốn thì cũng cần phải cá cược với công ty bảo hiểm.</p>
-<h4>Phải đặt bao nhiêu tiền để cá cược với công ty bảo hiểm?</h4>
+<h2>Phải đặt bao nhiêu tiền để cá cược với công ty bảo hiểm?</h2>
 <p>Tuỳ theo tuổi của người tham gia <a href="/huu-ich/cac-loai-bao-hiem/">bảo hiểm</a>, và tuỳ theo cá cược về điều gì, tỉ lệ đặt cược sẽ khác nhau, thay đổi từ 1/500 đến 1/40. Để nhận được 1 tỉ đồng khi bị tai nạn nghiêm trọng trong vòng một năm, chỉ cần đặt 2 triệu đồng (hay là 5.500 đồng mỗi ngày). Để nhận được 400 triệu khi bị một trong hàng chục thứ bệnh nghiêm trọng như ung thư, đột quỵ, suy thận… trong vòng 20 năm thì phải đặt 10 triệu đồng trong năm đầu tiên, các năm sau đặt thêm một ít cho đủ 25 triệu đồng.</p>
-<h4>Bạn đã cá cược với công ty bảo hiểm nào chưa?</h4>
+<h2>Bạn đã cá cược với công ty bảo hiểm nào chưa?</h2>
 <div class="todiscuss">
 Các bài liên quan:
 <br>* <a href="/huu-ich/cau-chuyen/sinh-lao-benh-tu">Những rủi ro khó tránh</a>
@@ -314,7 +309,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
