--- a/y-kien/bi-mat-doi-tu.html
+++ b/y-kien/bi-mat-doi-tu.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
-    <div class="title">Bàn về bí-mật đời-tư</div>
-<div class="right">Viết lần đầu trong Tháng Tám, 2020.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +231,8 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
+  <h1>Bàn về bí-mật đời-tư</h1>
+<div class="right">Viết lần đầu trong Tháng Tám, 2020.</div>
 <p>Những điều tôi viết dưới-đây thể-hiện cách-suy-nghĩ và cách-sống đơn-giản của tôi.
 </p>
 <p>Tôi thấy người-ta đang ngày-càng mở-rộng quá mức định-nghĩa bí-mật đời-tư.
@@ -311,7 +307,7 @@ data-ad-slot="3830899615">
 
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
