--- a/y-kien/da-len-bao.html
+++ b/y-kien/da-len-bao.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Các bài đăng báo (Trang web LHBội)</title>
+<title>Những ý-kiến đã đăng báo</title>
 <meta name="description" content="Các bài viết của tôi đã được đăng báo Sài Gòn Tiếp Thị" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/da-len-bao">
@@ -65,7 +65,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -174,14 +174,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </div>
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
 
   <div class="body">
-    <div class="title">Các bài đăng báo</div>
 
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
@@ -200,6 +195,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </amp-facebook-like>
   </div>
 
+  <h1>Những ý-kiến đã đăng báo</h1>
 <p>Các bài viết đã được đăng trên báo Sài Gòn Tiếp Thị. Sài Gòn Tiếp Thị hồi đó do Ban biên tập khác làm, sau này bị ép giao cho Ban biên tập khác. Web server sgtt hiện nay không giữ những bài trước khi chuyển giao. Các bạn bấm vào tựa bài dưới đây để xem bản lưu trữ của bài báo.</p>
 <div>
 <table class="withborder">
@@ -269,7 +265,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </div>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
