--- a/y-kien/gia-tra.html
+++ b/y-kien/gia-tra.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Giả trá (Trang web LHBội)</title>
+<title>Thế giới đầy những giả trá</title>
 <meta name="description" content="Thế giới đầy những giả trá, kỹ nghệ càng phát triển thì càng nhiều thứ giả" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/gia-tra">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Thế giới đầy những giả trá</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,13 +230,14 @@ https://lehboi.github.io/y-kien/gia-tra
     </amp-facebook-like>
   </div>
 
+  <h1>Thế giới đầy những giả trá</h1>
 <p>Thế giới quanh ta đầy rẫy những sự giả trá mà rất ít người để ý, phần đông vẫn chấp nhận những thứ đó một cách thản nhiên. Chỉ xét riêng những thứ mà ta ăn uống vào người hàng ngày cũng đã có vô số đồ giả.</p>
 <p>Thực phẩm tươi như cá thịt thì được ướp u-rê, hàn the; thịt bò nhuộm màu; rau muống tươi ngon nhờ có dầu nhớt thải; rau đẹp nhờ dư lượng thuốc trừ sâu; trái cây ngoài tươi trong héo nhờ chất bảo quản bí mật.</p>
 <p>Thực phẩm chế biến tại những cơ sở thủ công lại được chồng thêm một lớp giả trá nữa: thêm bột tẩy trắng hoặc màu vào cho đẹp (ngay cả khi dùng đúng màu thực phẩm thì vẫn là màu không thật), thêm phoóc-môn và hàn the để thực phẩm lâu hư và dai, thêm bột ngọt cho đậm đà. Nước tương và nước mắm sản xuất từ nước pha muối, màu và hương liệu Trung Quốc. Có một loại kẹo dẻo sản xuất thủ công ở Đà Lạt, không biết làm từ thành phần gì mà để ngay cạnh tổ kiến vài ngày mà không có con kiến nào tìm đến.</p>
 <p>Đừng tưởng thực phẩm công nghiệp của những thương hiệu lớn thì không chứa đựng những giả trá. Những giả trá đó được làm một cách hợp pháp và khéo léo hơn. Khi đọc dòng chữ "Lắc đều trước khi dùng" trên hộp sữa tươi hương dâu tôi tưởng rằng trong hộp có quả dâu xay nhuyễn, nhưng xem kỹ thì thấy chỉ có hương dâu tổng hợp. Kem hương sầu riêng, hương lá dứa cũng chẳng hề có thành phần sầu riêng hay lá dứa, chỉ có màu và hương tổng hợp. Nước mắm, nước tương có pha thêm bột ngọt. Nước mắm cao cấp hương cá hồi, mì ăn liền cá hồi nấu măng cũng chẳng có tí xíu cá hồi và măng nào, chỉ có mùi vị tổng hợp. Một vài sản phẩm thật sự có chứa thành phần tự nhiên nhưng chỉ với mục đích quảng cáo hấp dẫn hơn, ví dụ như kẹo mềm <a href="https://www.wrigley.com/brands/worldwide_brands.do" target="_blank">Sugus</a> được quảng cáo là làm từ trái cây nhưng xem kỹ thành phần in trên vỏ hộp thì có cả hương tổng hợp mà người dùng không được biết tỉ lệ giữa trái cây tự nhiên và tổng hợp là bao nhiêu. Một nhà sản xuất khác thì thẳng thắn hơn khi ghi rõ thành phần trên bao: 10g bột khoai tây trong 1Kg mì ăn liền và 10g bột tôm càng xanh trong 1Kg nước súp cô đặc, tính ra trong một gói mì 85g chỉ có khoảng 0,8g khoai tây và 0,05g bột tôm càng xanh, nhưng vẫn được giới thiệu là mì làm từ khoai tây, có vị tôm càng xanh.</p>
 <p>Thật ra cũng có những thực phẩm công nghiệp không quá giả dối như vậy, ví dụ như sữa chua trái cây <a href="https://www.vinamilk.com.vn/vi/nhan-hieu/4/sua-chua-an" target="_blank">Vinamilk</a> thật sự có 5% mứt trái cây, các loại bánh hay kem sô-cô-la vẫn dùng sô-cô-la tự nhiên.</p>
 <p>Thời này muốn kiếm mua những thực phẩm tự nhiên và an toàn vệ sinh hơi khó. Làm sao tìm được những thứ mứt chỉ làm từ trái cây và đường, những thứ kem có trái cây xay nhuyễn thay vì hương trái cây, những gói mì ăn liền không bột ngọt. Những sản phẩm thật sự tự nhiên thường được làm ra từ những cơ sở nhỏ, không đủ điều kiện để bảo quản lâu, không đủ vệ sinh.</p>
-Tôi còn nhớ những năm 1980, nhà tôi có làm kem xốp (giống như kem hộp của Vinamilk bây giờ) bằng máy làm kem gia đình của Mỹ để bán. Kem được làm bằng cách nấu sữa bột, bột mì (để tạo độ dẻo), trái cây xay nhuyễn, sau đó cho vào thùng hình trụ tròn, thùng được quay và khuấy liên tục trong khi ngâm trong hỗn hợp nước đá và muối hột, quay bằng tay liên tục khoảng 40 phút thì thành kem xốp và mềm. Kem được làm hoàn toàn từ các thành phần tự nhiên, không có màu và hương tổng hợp.
+<p>Tôi còn nhớ những năm 1980, nhà tôi có làm kem xốp (giống như kem hộp của Vinamilk bây giờ) bằng máy làm kem gia đình của Mỹ để bán. Kem được làm bằng cách nấu sữa bột, bột mì (để tạo độ dẻo), trái cây xay nhuyễn, sau đó cho vào thùng hình trụ tròn, thùng được quay và khuấy liên tục trong khi ngâm trong hỗn hợp nước đá và muối hột, quay bằng tay liên tục khoảng 40 phút thì thành kem xốp và mềm. Kem được làm hoàn toàn từ các thành phần tự nhiên, không có màu và hương tổng hợp.
 <br>Hoá ra là những tiến bộ trong công nghiệp thực phẩm không giúp cho những sản phẩm tự nhiên tốt hơn mà lại giúp cho nhà sản xuất làm ra những sản phẩm giống với tự nhiên. Những sản phẩm giả tự nhiên đó vẫn được sản xuất, vẫn được tiêu thụ, nhà sản xuất quá dễ dãi đối với sản phẩm của mình còn người người tiêu dùng thì quá dễ dãi khi ăn uống. Và không biết việc ăn uống những đồ giả đó có làm con người dễ dàng cư xử giả dối với nhau không?</p>
 
 <!-- AMP In-article 1 -->
@@ -272,7 +267,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
