--- a/y-kien/index.html
+++ b/y-kien/index.html
@@ -65,7 +65,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -174,10 +174,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </div>
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
     <div class="title">Những suy-nghĩ về các vấn-đề trong xã-hội</div>
@@ -201,22 +197,21 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <!-- body here -->
 <dl>
-  <dt><a href='/y-kien/su-giau-co'>Nguồn gốc sự giàu có</a></dt>
-  <dt><a href='/y-kien/do-giau'>Đo độ giàu có</a></dt>
+  <dt><a href='/y-kien/su-giau-co'>Các nguồn gốc của sự giàu có</a></dt>
   <dt><a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay</a></dt>
-  <dt><a href='/y-kien/xa-hoi-thong-tin'>Xã-hội thông-tin</a></dt>
-  <dt><a href='/y-kien/bi-mat-doi-tu'>Bí-mật đời-tư</a></dt>
+  <dt><a href='/y-kien/xa-hoi-thong-tin'>Viễn cảnh: Một xã hội thông tin ở Việt Nam</a></dt>
+  <dt><a href='/y-kien/bi-mat-doi-tu'>Bàn về Bí-mật đời-tư</a></dt>
   <dt><a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a></dt>
   <dt><a href='/y-kien/muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a></dt>
   <dt><a href='/y-kien/thanh-ngu-ve-tien'>Thành ngữ về tiền</a></dt>
   <dt><a href='/y-kien/tien-va-mau'>Tiền và Máu</a></dt>
-  <dt><a href='/y-kien/gia-tra'>Giả trá</a></dt>
+  <dt><a href='/y-kien/gia-tra'>Thế giới đầy những giả trá</a></dt>
   <dt><a href='/y-kien/nhung-cai-nem'>Những cái nêm</a></dt>
   <dt><a href='/y-kien/khac-nguoi'>Khác người</a></dt>
   <dt><a href='/y-kien/da-len-bao'>Những ý-kiến đã đăng báo</a></dt>
 </dl>
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
