--- a/y-kien/muc-hay-den.html
+++ b/y-kien/muc-hay-den.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Gần mực thì đen, gần đèn thì sáng (Trang web LHBội)</title>
+<title>Gần mực thì đen, gần đèn thì sáng</title>
 <meta name="description" content="Điều quan trọng nhất ở mỗi người là khả năng phân biệt" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tục ngữ, mực, đèn">
 <link rel="canonical" href="https://lehboi.github.io/y-kien/muc-hay-den">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,17 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Gần mực thì đen, gần đèn thì sáng</div>
-<!-- body here -->
-<div class="right">Tháng Mười, 2016</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -238,6 +230,9 @@ https://lehboi.github.io/y-kien/muc-hay-den
     </amp-facebook-like>
   </div>
 
+<!-- body here -->
+  <h1>Gần mực thì đen, gần đèn thì sáng</h1>
+<div class="right">Tháng Mười, 2016</div>
 <p>Mọi người đều hiểu được nghĩa đen và nghĩa bóng của câu tục ngữ đó từ khi còn học tiểu học. Nguồn gốc của câu tục ngữ đó là hành vi của đám đông: đa số người ta dễ dàng sao chép suy nghĩ, lời nói và hành động của những người chung quanh. Chung quanh có  'mực' thì người ta dễ bị 'đen', chung quanh có 'đèn' thì người ta được 'sáng'.</p>
 <p>Điều tui muốn bàn ở đây là việc áp dụng câu đó trong thực tế. Trong thực tế thì 'đèn' và 'mực' không đứng tách rời nhau mà lẫn lộn với nhau. Trong trường hợp chung quanh vừa có 'đèn', vừa có 'mực' như vậy thì người ta sẽ 'đen' hay 'sáng'? Khi đó ta có thể thấy được khả năng phân biệt của mỗi người. Người nào có khả năng phân biệt sẽ chọn 'gần đèn' để được sáng hơn, những người còn lại thì cứ để 'mực ở gần' mà không nghĩ đến việc bị đen. Theo quan sát của tui thì số người có khả năng phân biệt không nhiều; bởi vậy mới có nhiều <a href="khac-nguoi">'hiện tượng đám đông'</a>.</p>
 <p>Lấy một ví dụ về khả năng phân biệt đúng sai. Mỗi lần nói đến chuyện đầu tư cổ phiếu là vài người thân của tui la oai oái, tự động phát lại những câu sau:</p>
@@ -279,7 +274,7 @@ data-ad-slot="3830899615">
 <p>Khả năng phân biệt là một thứ cần thiết để con người tự hoàn thiện, còn những thứ khác nữa được giải thích trong <a href="/download/D%C6%B0%E1%BB%9BiCh%C3%A2nTh%E1%BA%A7y.pdf" target='_blank'>cuốn sách nhỏ này</a>. Phải thực hành phân biệt thật sớm, trước khi bị dính mực. Bị dính mực rồi thì nhìn mọi thứ đều lem nhem như nhau, khó phân biệt hơn.</p>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
