--- a/y-kien/thanh-ngu-ve-tien.html
+++ b/y-kien/thanh-ngu-ve-tien.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Thành ngữ về tiền (Trang web LHBội)</title>
+<title>Thành ngữ về tiền</title>
 <meta name="description" content="Áp dụng những thành ngữ về tiền vào cuộc sống hiện nay" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/y-kien/thanh-ngu-ve-tien">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Thành ngữ về tiền</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,14 +230,15 @@ https://lehboi.github.io/y-kien/thanh-ngu-ve-tien
     </amp-facebook-like>
   </div>
 
+  <h1>Thành ngữ về tiền</h1>
 <p>Người xưa có nhiều câu nói về tiền, chúng ta thử xem lại những câu đó trong xã hội ngày nay xem sao.</p>
-<h4>Nhất nghệ tinh nhất thân vinh</h4>
+<h2>Nhất nghệ tinh nhất thân vinh</h2>
 <p>Ý nghĩa câu này là nếu có trình độ chuyên môn cao thì sẽ được trọng dụng, thu nhập ổn định, cuộc sống sẽ dễ dàng.
 Nếu là người đi làm thuê thì nên là người giỏi nhất trong nhóm, trong tổ, thuộc nhóm người giỏi nhất trong phòng, trong chi nhánh, trong công ty. Khi đó cấp trên sẽ nghĩ đến mình trước tiên khi định tăng lương, và nghĩ đến mình sau cùng khi muốn bớt người. Sau khi đã tinh thông một nghề rồi, muốn tinh thông thêm nghề nữa cũng được.</p>
-<h4>Buôn tàu bán bè không bằng ăn dè hà tiện</h4>
+<h2>Buôn tàu bán bè không bằng ăn dè hà tiện</h2>
 <p>Có thể hiểu câu này một cách đơn giản là mỗi người hay mỗi gia đình không được tiêu hết số tiền kiếm được. Kiếm được nhiều tiền mà tiêu hết thì <i>không tốt bằng</i> kiếm ít tiền mà tiêu không hết. Không thể thấy ngay sự 'không tốt bằng' khi vẫn còn kiếm được tiền, nó chỉ hiện ra khi không thể kiếm tiền được nữa (khi về già, khi ốm đau…). Ý nghĩa này vẫn còn đúng trong thời nay và đúng ở các nước khác nhau.<br />
 Không nên hiểu ăn dè hà tiện là tiết kiệm hết mức, chỉ cần tiết kiệm đủ cho tương lai, có cách tính để mỗi người có thể tự <a href="/huu-ich/ke-hoach-tai-chinh/">tính xem tiết kiệm đến mức nào thì đủ</a>. </p>
-<h4>Tích tiểu thành đại</h4>
+<h2>Tích tiểu thành đại</h2>
 <p>Để dành những món nhỏ sẽ có lúc được một món lớn. Điều này vẫn còn đúng, nhưng nên để ý thứ để dành là thứ gì, nó có bị hư hỏng theo thời gian không. Trong xã hội hiện đại có quá nhiều thứ để mua, nhưng có những thứ hợp với mục đích để dành hơn thứ khác.
 <br>Nhờ nền kinh tế phát triển mà có những thứ tự nó sinh sôi ra khi <a href="/huu-ich/tich-luy">tích luỹ</a> nên việc tích luỹ sẽ dễ dàng hơn.</p>
 <!-- AMP In-article 1 -->
@@ -272,14 +267,14 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h4>Phi thương bất phú</h4>
+<h2>Phi thương bất phú</h2>
 <p>Trong xã hội nông nghiệp, không có nền kinh tế thị trường xưa kia thì nghề mua đi bán lại dễ dàng kiếm tiền hơn những nghề sản xuất như nông nghiệp, thủ công; chủ động về thời gian trong công việc hơn là nghề nông. Nghề mua đi bán lại thời xưa ít bị cạnh tranh.<br />
 Xã hội ngày nay đã thay đổi nhiều so với thời xưa. Đất chật người đông, không còn việc gì là ít cạnh tranh nữa. Thời nay muốn kiếm được nhiều tiền phải <i>Nhất nghệ tinh</i>, phải thật giỏi trong công việc của mình dù đó là việc sản xuất, buôn bán hay dịch vụ. Nếu vừa giỏi vừa tạo ra sự khác biệt so với đối thủ cạnh tranh thì càng dễ kiếm tiền hơn. Nếu đang có công việc ổn định mà cứ nghĩ là phải mua bán thứ gì đó mới giàu thì e rằng khó làm tinh cả hai việc. Nếu việc buôn bán dễ làm giàu thì mấy người buôn gánh bán bưng đang làm gì mà không giàu.
 <br>Bạn muốn có lợi nhuận nhưng không có thời gian để đi buôn? Hãy thuê người khác làm việc đó cho bạn một cách chuyên nghiệp, đó gọi là <a href="/huu-ich/cach-dau-tu">đầu tư</a>. Muốn đầu tư thì phải có vốn. Muốn có vốn thì phải tích tiểu thành đại. Muốn tích được thì phải ăn dè hà tiện.</p>
-<h4>An cư lạc nghiệp</h4>
+<h2>An cư lạc nghiệp</h2>
 <p>Câu này luôn luôn đúng nhưng phải hiểu theo cách thoáng. An cư là có chỗ ở tốt, chỗ ở tốt không nhất thiết phải là nhà của mình. Ở nhà thuê mà được thoải mái, môi trường tốt thì vẫn là an cư. Do đó mục tiêu của những gia đình chưa có chỗ ở ổn định là tìm chỗ ở tốt chứ không nhất thiết là mua nhà tốt. Nếu khả năng tài chính cho phép thì nên mua nhà trên đất riêng, nếu không được như vậy thì ở thuê trong các khu chung cư tốt cũng được.
 Khi bạn sống trong một căn nhà thì bạn luôn luôn phải tốn tiền dù cho đó là nhà của bạn. Nếu đó là nhà của bạn thì bạn đã tốn chi phí cơ hội, nghĩa là nếu đem cho thuê căn nhà đó được n triệu đồng mỗi tháng mà bạn ở trong đó thì mỗi tháng bạn đã kiếm được và tiêu hết ngay n triệu đồng đó; trong trường hợp này nếu bạn có thể thuê một căn khác sống tốt với n-i triệu đồng thì bạn đã có thêm i triệu đồng tiền mặt.</p>
-<h4>Tham thì thâm</h4>
+<h2>Tham thì thâm</h2>
 <p>Khi tham quá thì đầu óc kém tỉnh táo, dẫn đến những liều lĩnh, sai lầm làm thua lỗ, thâm vào vốn. Trong xã hội Việt Nam hiện đại, người ta nghe nhiều về những trường hợp thua lỗ trên sàn chứng khoán. Đó là ví dụ rõ ràng nhất của tham thì thâm. Tôi đã <a href="/huu-ich/de-tien-vao-dau">tham gia thị trường chứng khoán</a> từ năm 2002, nhưng tôi không tham nên không bị thâm.</p>
 
 <!-- AMP In-article 1 -->
@@ -309,7 +304,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
