--- a/y-kien/tien-va-mau.html
+++ b/y-kien/tien-va-mau.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tiền và Máu (Trang web LHBội)</title>
+<title>Tiền và Máu</title>
 <meta name="description" content="Những điều giống nhau và khác nhau giữa Tiền và Máu" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/y-kien/tien-va-mau">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -210,15 +210,9 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
 
   <div class="body">
-    <div class="title">Tiền và Máu</div>
-<div class="right">Viết lần đầu trong Tháng Sáu, 2014</div>
 
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
@@ -237,14 +231,14 @@ https://lehboi.github.io/y-kien/tien-va-mau
     </amp-facebook-like>
   </div>
 
-<p>
-Nhiều người vẫn thường ví <b>Tiền</b> như <b>Máu</b>, khi <i>thiếu tiền</i> thì than rằng <i>khô máu</i>. Ví như vậy cũng đúng ở nhiều điểm.
+  <h1>Tiền và Máu</h1>
+<div class="right">Viết lần đầu trong Tháng Sáu, 2014</div>
+<p>Nhiều người vẫn thường ví <b>Tiền</b> như <b>Máu</b>, khi <i>thiếu tiền</i> thì than rằng <i>khô máu</i>. Ví như vậy cũng đúng ở nhiều điểm.
 <br>Tiền cần thiết cho cuộc sống cũng như Máu cần thiết cho cơ thể sống. Thiếu tiền thì cuộc sống chật vật, thiếu máu thì cơ thể sống yếu ớt.
 <br>Hôm qua, khi đi hiến máu, tôi còn thấy một điểm tương tự giữa tiền và máu. Các tế bào máu trong cơ thể sẽ già và chết đi sau 80-120 ngày, nếu chúng ta không rút một phần máu ra gửi vào ngân hàng máu thì một phần máu trong cơ thể cũng bị mất đi một cách tự nhiên. Khi gửi máu vào ngân hàng máu, người gửi nhận được một giấy chứng nhận, khi cơ thể cần được thêm máu thì có thể nhận lại lượng máu đã gửi. Cũng có thể người gửi không bao giờ cần nhận lại máu, không ai mong có lúc phải nằm bệnh viện để được truyền thêm máu vào người nhưng không ai biết chắc chắn là mình sẽ không bao giờ cần được truyền máu.
 <br>Tương tự như các tế bào máu, một phần tiền của bạn có thể mất đi mà không đem lại lợi ích đáng kể. Thay vì để mất đi như vậy bạn có thể gửi tiền vào một chỗ khác để sau này dùng. Ví dụ những cách để bớt mất tiền: nấu ăn ở nhà thay vì ăn tiệm, <a href="dung-hang-viet-nam">dùng hàng Việt Nam</a> thay vì dùng hàng ngoại.
 <br>Một điểm tương tự khác giữa tiền và máu là bạn không thể biết chắc chắn sau này bạn cần bao nhiêu tiền. Hôm nay bạn có dư tiền, nhưng ngày mai có <a href="/huu-ich/ke-hoach-tai-chinh/bao-ve">những việc xảy ra</a> khiến bạn cần thêm rất nhiều tiền.
-<br>
-Mỗi lần rút ra một ít máu, từ từ sẽ được một lượng lớn, lớn gấp nhiều lần lượng máu trong cơ thể. Cũng như mỗi ngày để dành một ít tiền sẽ có một số tiền lớn gấp nhiều lần lương tháng.
+<br>Mỗi lần rút ra một ít máu, từ từ sẽ được một lượng lớn, lớn gấp nhiều lần lượng máu trong cơ thể. Cũng như mỗi ngày để dành một ít tiền sẽ có một số tiền lớn gấp nhiều lần lương tháng.
 
 <br>Điểm khác nhau giữa tiền và máu: khi lấy tiền ra khỏi túi để gửi đi <a href="/huu-ich/de-tien-vao-dau">đầu tư một cách an toàn</a>, bạn chắc chắn sẽ nhận lại được cả gốc và lãi, nếu không cần dùng thì cũng có thể để cho người thân dùng.</p>
 <div class="todiscuss">Mọi ý kiến bình luận xin ghi vào trang <a href="https://www.facebook.com/lamgiauchacchan/posts/375956719236609" rel="nofollow" target="_blank">Facebook</a> hoặc <a href="https://twitter.com/GiauCham/status/1133515375641890817" target="_blank">Twitter</a>.</div>
@@ -276,7 +270,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
