--- a/y-kien/xa-hoi-thong-tin.html
+++ b/y-kien/xa-hoi-thong-tin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Xã hội thông tin (Trang web LHBội)</title>
+<title>Viễn cảnh: Một xã hội thông tin ở Việt Nam</title>
 <meta name="description" content="Viễn cảnh: Một xã hội thông tin ở Việt Nam. CNTT đem lại những ích lợi cho con người." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/xa-hoi-thong-tin">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Viễn cảnh: Một xã hội thông tin ở Việt Nam</div>
-<div class="right"><a href="https://web.archive.org/web/20090907183525/https://lhboi.homelinux.net/writing/InformationSociety" target='_blank'>Tháng Giêng, 2008</a></div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,8 +230,11 @@ https://lehboi.github.io/y-kien/xa-hoi-thong-tin
     </amp-facebook-like>
   </div>
 
+  <h1>Viễn cảnh: Một xã hội thông tin ở Việt Nam</h1>
+<div class="right"><a href="https://web.archive.org/web/20090907183525/https://lhboi.homelinux.net/writing/InformationSociety" target='_blank'>Tháng Giêng, 2008</a></div>
 <p>Bộ Công an đang thực hiện một hệ thống cơ sở dữ liệu công dân toàn quốc để cấp chứng minh nhân dân, hộ khẩu, hộ chiếu. Từ việc này ta có thể mơ tới một xã hội thông tin ở Việt Nam trong tương lai. Khi hệ thống đó của Bộ Công an hoàn thành, mọi công dân Việt Nam từ khi chào đời đều được phân biệt với nhau qua một mã số duy nhất và với mã số đó có thể tìm ra được những thông tin liên quan đến công dân đó. Trước mắt thì chỉ có những thông tin cơ bản như ngày và nơi sinh, giới tính, nhóm máu, tên cha mẹ, địa chỉ cư trú. Dựa trên hệ thống cơ sở dữ liệu cơ bản đó, các ngành khác có thể xây dựng các cơ sở dữ liệu bổ sung:
-<ul><li>ngành giáo dục thêm vào thông tin về quá trình học tập, bằng cấp</li>
+<ul>
+<li>ngành giáo dục thêm vào thông tin về quá trình học tập, bằng cấp</li>
 <li>ngành y tế thêm vào hồ sơ sức khoẻ, bảo hiểm y tế</li>
 <li>ngành giao thông thêm vào thông tin về bằng lái xe</li>
 <li>cảnh sát giao thông thêm vào thông tin về các vi phạm luật giao thông và đăng ký chủ quyền xe</li>
@@ -246,7 +242,8 @@ https://lehboi.github.io/y-kien/xa-hoi-thong-tin
 <li>ngành tài chính thêm vào thông tin về thuế thu nhập cá nhân, thuế nhà-đất, quá trình vay nợ ngân hàng</li>
 <li>ngành tư pháp thêm vào lý lịch tư pháp</li>
 <li>các công ty điện thoại thêm vào số điện thoại di động</li>
-<li>…</li></ul>
+<li>…</li>
+</ul>
 Những thông tin bổ sung đó được tạo ra và duy trì trong các hệ thống máy của từng ngành, tất cả đều dùng chung mã số của công dân làm chìa khoá của thông tin. Tất cả các thông tin đó phát sinh từ cấp cơ sở của các tổ chức kinh tế hay xã hội, và sẽ quay lại phục vụ cho mọi hoạt động của kinh tế và xã hội. Tất cả mọi thông tin được ghi lại đều có ích, ghi được càng nhiều càng tốt. Một phần thông tin chỉ để dùng nội bộ trong từng tổ chức, một phần được mở cho các đối tượng trong xã hội dùng. Mọi thông tin luôn luôn đi theo từng cá nhân từ khi sinh ra đến khi qua đời.<br />
 Một em bé vừa được sinh ra, bệnh viện nhập ngay mã số cá nhân và tên mẹ, ngày giờ, nơi sinh vào với một mã số cá nhân mới (được cấp từ hệ thống của công an). Cha mẹ không cần đem giấy chứng sinh, chỉ cần đem mã số cá nhân của em bé và cha mẹ đến hộ tịch phường làm khai sinh thì hồ sơ thông tin của em bé sẽ có thêm tên, tên cha, quê quán, số giấy khai sinh. Sau đó cũng không cần đem giấy khai sinh, chỉ cần đem mã số cá nhân đến công an quận để nhập hộ khẩu là hồ sơ số của em bé có thêm địa chỉ thường trú. Khi đến tuổi đi học, cũng không cần nộp giấy khai sinh cho nhà trường. Tương tự như thế, đến đâu cũng chỉ cần đưa mã số cá nhân ra là mọi thông tin cần thiết đều có sẵn để dùng.
 <!-- AMP In-article 1 -->
@@ -276,14 +273,18 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 <p>Việc nhập thêm, sửa đổi hay xem thông tin của mỗi công dân đều phải được kiểm soát chặt chẽ. Mỗi người chỉ được xem hay sửa thông tin trong quyền hạn của mình. Ví dụ như:</p>
-<ul><li>mọi công dân đều có quyền <b>xem</b> tất cả và cho người khác xem từng phần hay tất cả mọi thông tin liên quan đến chính mình và người mà mình đang bảo hộ (ví dụ như con chưa đến tuổi trưởng thành)</li>
-<li>từng mục thông tin đều được phân quyền cho một số cá nhân thêm hay sửa, mỗi lần thêm hay sửa thông tin đều phải ghi lại thời điểm, người thực hiện, các chứng cứ có liên quan và người kiểm tra lại. Các chứng cứ có liên quan là các biên bản, hồ sơ đã được số hoá và ký bằng chữ ký số và cũng được lưu trữ trong hệ thống cơ sở dữ liệu toàn quốc. Người thực hiện và người kiểm tra đều được ghi dưới dạng mã số của người đó. Việc phân quyền dựa trên một hệ thống kiểm soát quyền, đó là hệ thống phân tán đến các cơ sở; việc cấp quyền được giao cho những người chịu trách nhiệm ở các cơ sở.</li></ul>
+<ul>
+<li>mọi công dân đều có quyền <b>xem</b> tất cả và cho người khác xem từng phần hay tất cả mọi thông tin liên quan đến chính mình và người mà mình đang bảo hộ (ví dụ như con chưa đến tuổi trưởng thành)</li>
+<li>từng mục thông tin đều được phân quyền cho một số cá nhân thêm hay sửa, mỗi lần thêm hay sửa thông tin đều phải ghi lại thời điểm, người thực hiện, các chứng cứ có liên quan và người kiểm tra lại. Các chứng cứ có liên quan là các biên bản, hồ sơ đã được số hoá và ký bằng chữ ký số và cũng được lưu trữ trong hệ thống cơ sở dữ liệu toàn quốc. Người thực hiện và người kiểm tra đều được ghi dưới dạng mã số của người đó. Việc phân quyền dựa trên một hệ thống kiểm soát quyền, đó là hệ thống phân tán đến các cơ sở; việc cấp quyền được giao cho những người chịu trách nhiệm ở các cơ sở.</li>
+</ul>
 <p>Một vài ví dụ về cách phân quyền:</p>
-<ul><li>cảnh sát khu vực được quyền sửa đổi thông tin về nơi thường trú/tạm trú của những công dân trong khu vực mình phụ trách trong nhiệm kỳ công tác của mình, khi hết nhiệm kỳ hoặc chuyển sang khu vực khác thì quyền sẽ thay đổi.</li>
+<ul>
+<li>cảnh sát khu vực được quyền sửa đổi thông tin về nơi thường trú/tạm trú của những công dân trong khu vực mình phụ trách trong nhiệm kỳ công tác của mình, khi hết nhiệm kỳ hoặc chuyển sang khu vực khác thì quyền sẽ thay đổi.</li>
 <li>nhân viên tín dụng của ngân hàng được quyền ghi về quá trình vay nợ ngân hàng của khách hàng giao dịch với ngân hàng mình</li>
 <li>công dân được quyền ghi vào hồ sơ sức khoẻ của mình những thông tin đã được ký bằng chữ ký số bởi nhân viên y tế có thẩm quyền</li>
 <li>nếu công dân thấy thông tin về mình chưa chính xác thì sẽ có phương tiện để yêu cầu sửa sai, công dân không được quyền xoá bất cứ thông tin nào của mình</li>
-<li>các tổ chức kinh tế/xã hội có thể xem một phần thông tin của công dân đến giao dịch trong phạm vi cho phép và đôi khi phải được sự đồng ý của công dân đó. Ví dụ như công ty bán bảo hiểm xe hơi có thể yêu cầu khách hàng cho xem thông tin về vi phạm luật giao thông trước khi quyết định mức phí bảo hiểm, nếu khách hàng từ chối cho xem thì công ty bảo hiểm vẫn bán bảo hiểm nhưng mức phí có thể cao hơn. Nhân viên tín dụng ngân hàng có thể yêu cầu khách hàng cho xem quá trình vay nợ ngân hàng trước khi quyết định cho vay. Công ty bảo hiểm nhân thọ có quyền yêu cầu khách hàng cho xem thông tin về sức khoẻ. Cảnh sát giao thông có quyền xem thông tin về bằng lái mà không cần sự đồng ý của công dân. Nhân viên y tế cấp cứu có quyền xem hồ sơ sức khoẻ của người được cấp cứu.</li></ul>
+<li>các tổ chức kinh tế/xã hội có thể xem một phần thông tin của công dân đến giao dịch trong phạm vi cho phép và đôi khi phải được sự đồng ý của công dân đó. Ví dụ như công ty bán bảo hiểm xe hơi có thể yêu cầu khách hàng cho xem thông tin về vi phạm luật giao thông trước khi quyết định mức phí bảo hiểm, nếu khách hàng từ chối cho xem thì công ty bảo hiểm vẫn bán bảo hiểm nhưng mức phí có thể cao hơn. Nhân viên tín dụng ngân hàng có thể yêu cầu khách hàng cho xem quá trình vay nợ ngân hàng trước khi quyết định cho vay. Công ty bảo hiểm nhân thọ có quyền yêu cầu khách hàng cho xem thông tin về sức khoẻ. Cảnh sát giao thông có quyền xem thông tin về bằng lái mà không cần sự đồng ý của công dân. Nhân viên y tế cấp cứu có quyền xem hồ sơ sức khoẻ của người được cấp cứu.</li>
+</ul>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -310,15 +311,14 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<p>Thông tin được tạo ra ở cấp cơ sở của các tổ chức và sẽ được tập trung lại trong các hệ thống cơ sở dữ liệu cấp cao hơn. Ví dụ như thông tin về giao dịch với ngân hàng được tạo ra ở các phòng giao dịch, rồi được tập trung về chi nhánh, rồi lại được chuyển tiếp lên ngân hàng chính và cuối cùng là vào hệ thống cơ sở dữ liệu ngành ngân hàng.<br />
-</p>
+<p>Thông tin được tạo ra ở cấp cơ sở của các tổ chức và sẽ được tập trung lại trong các hệ thống cơ sở dữ liệu cấp cao hơn. Ví dụ như thông tin về giao dịch với ngân hàng được tạo ra ở các phòng giao dịch, rồi được tập trung về chi nhánh, rồi lại được chuyển tiếp lên ngân hàng chính và cuối cùng là vào hệ thống cơ sở dữ liệu ngành ngân hàng.<br /></p>
 <div class="flright"><amp-img alt="Thẻ căn cước thông minh" src="/images/CCCD1.jpg" width="452" height="267" layout="responsive"></amp-img></a></div>
-<p>Mọi việc sửa hay xem thông tin đều thực hiện trên máy tính, hoặc các thiết bị thông tin di động; không cần in ra giấy và đóng dấu công chứng. Để làm được việc này, cần phải dùng một số phương tiện kỹ thuật như <i>chữ ký số</i>, <i>thẻ thông minh</i>, mạng thông tin di động… <br />
-Mọi công dân đều được cấp một bộ chữ ký số theo phương pháp khoá công khai gồm hai phần: phần riêng do công dân tự giữ trong thẻ CMND dạng thẻ thông minh và phần chung để cho mọi người khác dùng để đối chiếu với phần riêng. Tất cả các chữ ký số đều được giữ trong cơ sở dữ liệu tập trung kèm theo thời hạn hiệu lực của chữ ký số đó. Khi công dân làm thất lạc hay bị lộ phần riêng trong bộ chữ ký số thì phải làm thủ tục ngừng hiệu lực của bộ chữ ký số đó và nhận bộ chữ ký số mới. Chữ ký hết hiệu lực vẫn được giữ trong hệ thống cơ sở dữ liệu để sau này xem lại các hồ sơ đã ký trong thời gian hiệu lực của nó. <br />
-Thẻ thông minh là thẻ có mang một máy tính nhỏ bên trong, thẻ SIM của máy điện thoại di động là một loại thẻ thông minh.<br />
-Khi công dân giao dịch với các tổ chức, nhân viên giao dịch sẽ xem thẻ CMND của công dân và kiểm tra sơ xem thẻ có đúng là của công dân đó không bằng cách nhìn hình in trên thẻ hoặc qua các máy nhận dạng sinh học (dấu tay, ảnh võng mạc). Sau đó, nếu công dân đồng ý cho nhân viên lấy một phần thông tin cá nhân của mình thì đưa thẻ CMND vào máy đọc thẻ gắn với máy tính của nhân viên giao dịch, qua máy đọc thẻ đó, thẻ thông minh đồng ý cho hệ thống cơ sở dữ liệu gửi những phần thông tin mà nhân viên giao dịch được phép xem đến máy tính của nhân viên.<br />
-Trong những trường hợp công dân muốn chủ động cho người khác xem một phần thông tin của mình, ví dụ như khi đi xin việc, nhà tuyển dụng muốn biết hồ sơ sức khoẻ, quá trình học tập, công tác, lý lịch tư pháp và quá trình vay nợ của công dân thì sẽ có một ứng dụng trên máy chủ web của hệ thống cơ sở dữ liệu để công dân chọn những thông tin cần tiết lộ rồi đưa thẻ lại máy đọc thẻ để xác nhận việc đồng ý tiết lộ, sau đó hệ thống cơ sở dữ liệu sẽ gửi những thông tin đó đến hộp thư của nhà tuyển dụng dưới dạng đã ký bằng chữ ký số của máy chủ cơ sở dữ liệu (tương đương như đã được công chứng) và được mã hoá bằng chữ ký số của nhà tuyển dụng (chỉ có nhà tuyển dụng mới mở ra xem được); công dân có thể dùng máy tính tại nhà, tại nơi nhà tuyển dụng hay tại những <i>kiosqe thông tin</i> để làm việc gửi thông tin này.<br />
-Thông tin được tiết lộ từ hệ thống cơ sở dữ liệu sẽ ở dạng không thể in được, không thể tách rời từng phần được (trừ trường hợp người xem thông tin trên máy rồi ghi lại bằng tay từng chữ vào giấy hay vào máy tính), có kèm theo ghi chú cẩn thận về mục đích và đối tượng được xem thông tin, người nhận thông tin phải có trách nhiệm giữ bí mật của thông tin nhận được; dùng xong phải huỷ ngay, nếu thông tin bị phát tán ra thì có thể truy trách nhiệm người phát tán.</p>
+<p>Mọi việc sửa hay xem thông tin đều thực hiện trên máy tính, hoặc các thiết bị thông tin di động; không cần in ra giấy và đóng dấu công chứng. Để làm được việc này, cần phải dùng một số phương tiện kỹ thuật như <i>chữ ký số</i>, <i>thẻ thông minh</i>, mạng thông tin di động… 
+<br>Mọi công dân đều được cấp một bộ chữ ký số theo phương pháp khoá công khai gồm hai phần: phần riêng do công dân tự giữ trong thẻ CMND dạng thẻ thông minh và phần chung để cho mọi người khác dùng để đối chiếu với phần riêng. Tất cả các chữ ký số đều được giữ trong cơ sở dữ liệu tập trung kèm theo thời hạn hiệu lực của chữ ký số đó. Khi công dân làm thất lạc hay bị lộ phần riêng trong bộ chữ ký số thì phải làm thủ tục ngừng hiệu lực của bộ chữ ký số đó và nhận bộ chữ ký số mới. Chữ ký hết hiệu lực vẫn được giữ trong hệ thống cơ sở dữ liệu để sau này xem lại các hồ sơ đã ký trong thời gian hiệu lực của nó. 
+<br>Thẻ thông minh là thẻ có mang một máy tính nhỏ bên trong, thẻ SIM của máy điện thoại di động là một loại thẻ thông minh.
+<br>Khi công dân giao dịch với các tổ chức, nhân viên giao dịch sẽ xem thẻ CMND của công dân và kiểm tra sơ xem thẻ có đúng là của công dân đó không bằng cách nhìn hình in trên thẻ hoặc qua các máy nhận dạng sinh học (dấu tay, ảnh võng mạc). Sau đó, nếu công dân đồng ý cho nhân viên lấy một phần thông tin cá nhân của mình thì đưa thẻ CMND vào máy đọc thẻ gắn với máy tính của nhân viên giao dịch, qua máy đọc thẻ đó, thẻ thông minh đồng ý cho hệ thống cơ sở dữ liệu gửi những phần thông tin mà nhân viên giao dịch được phép xem đến máy tính của nhân viên.
+<br>Trong những trường hợp công dân muốn chủ động cho người khác xem một phần thông tin của mình, ví dụ như khi đi xin việc, nhà tuyển dụng muốn biết hồ sơ sức khoẻ, quá trình học tập, công tác, lý lịch tư pháp và quá trình vay nợ của công dân thì sẽ có một ứng dụng trên máy chủ web của hệ thống cơ sở dữ liệu để công dân chọn những thông tin cần tiết lộ rồi đưa thẻ lại máy đọc thẻ để xác nhận việc đồng ý tiết lộ, sau đó hệ thống cơ sở dữ liệu sẽ gửi những thông tin đó đến hộp thư của nhà tuyển dụng dưới dạng đã ký bằng chữ ký số của máy chủ cơ sở dữ liệu (tương đương như đã được công chứng) và được mã hoá bằng chữ ký số của nhà tuyển dụng (chỉ có nhà tuyển dụng mới mở ra xem được); công dân có thể dùng máy tính tại nhà, tại nơi nhà tuyển dụng hay tại những <i>kiosqe thông tin</i> để làm việc gửi thông tin này.
+<br>Thông tin được tiết lộ từ hệ thống cơ sở dữ liệu sẽ ở dạng không thể in được, không thể tách rời từng phần được (trừ trường hợp người xem thông tin trên máy rồi ghi lại bằng tay từng chữ vào giấy hay vào máy tính), có kèm theo ghi chú cẩn thận về mục đích và đối tượng được xem thông tin, người nhận thông tin phải có trách nhiệm giữ bí mật của thông tin nhận được; dùng xong phải huỷ ngay, nếu thông tin bị phát tán ra thì có thể truy trách nhiệm người phát tán.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -350,7 +350,7 @@ data-ad-slot="3830899615">
 <p>Để sử dụng một hệ thống thông tin to lớn như vậy một cách an toàn thì phải có nhiều biện pháp bảo mật thông tin, nhất là hệ thống lưu trữ chữ ký số. Một số biện pháp an ninh sau đây cần phải áp dụng để bảo vệ hệ thống lưu trữ chữ ký số: máy tính phải được đặt trong phòng chống bom, chống mọi sự đột nhập kể cả cách đào hầm từ lòng đất, chỉ những người có trách nhiệm mới được vào phòng và mỗi lần vào đều phải có giấy phép của giám đốc, phải có người làm chứng và phải ghi nhật ký công việc, không được đem thiết lưu trữ loại tháo được (thẻ nhớ, băng từ…) vào phòng, những thiết bị lưu trữ đã hết hạn sử dụng phải được xoá hết dữ liệu trước khi đem ra ngoài, hệ thống được sao lưu và kiểm tra định kỳ để kịp thời phát hiện mọi sự xâm nhập.</p>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
