--- a/kinh-nghiem/chu-viet/ghi-dau-thanh-1.html
+++ b/kinh-nghiem/chu-viet/ghi-dau-thanh-1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Ghi dấu thanh (Trang web LHBội)</title>
+<title>Ghi dấu thanh trong chữ Việt</title>
 <meta name="description" content="Đặt dấu thanh trên nguyên âm nào trong chữ Việt" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/chu-viet/ghi-dau-thanh-1">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Ghi dấu thanh trong chữ Việt</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/chu-viet/ghi-dau-thanh-1
     </amp-facebook-like>
   </div>
 
+  <h1>Ghi dấu thanh trong chữ Việt</h1>
   <p>Trong chữ viết Việt, dấu thanh được đặt trên nguyên âm. Nếu một từ có nhiều hơn 1 nguyên âm thì phải đặt dấu thanh ở nguyên âm nào?</p>
   <p><b><u>Quy tắc</u></b>:</p>
   <ol>
@@ -282,7 +277,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
