--- a/kinh-nghiem/chu-viet/utf-8.html
+++ b/kinh-nghiem/chu-viet/utf-8.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Chữ Việt và UTF-8 (Trang web LHBội)</title>
+<title>Chữ Việt và UTF-8</title>
 <meta name="description" content="Các cách lưu trang web chữ Việt: Unicode UTF-8, HTML entities, Windows-1252, Windows-1258" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/chu-viet/utf-8">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">UTF-8</div>
-  <div class="right">Soạn lần đầu năm 2005</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/kinh-nghiem/chu-viet/utf-8
     </amp-facebook-like>
   </div>
 
+  <h1>Chữ Việt và UTF-8</h1>
+  <div class="right">Soạn lần đầu năm 2005</div>
   <p>Các trang web ở đây được viết theo bộ chữ Unicode với cách mã hoá UTF-8. <u>Chú ý</u>: Rất nhiều trang web Việt Nam cũng xưng là dùng bộ chữ Unicode và UTF-8 nhưng lại dùng bộ chữ 8-bit Windows-1252 (cho các nước Tây Âu), hoặc bộ chữ 8-bit Windows-1258 (bộ chữ Việt nam trên các máy MS Windows). Lý do là vì web được soạn bằng các chương trình chạy trên Windows.
   <br>Tất nhiên là đã dùng 1 trong 2 bộ chữ 8-bit đó thì không thể dùng cách mã hoá UTF-8, mà cách mã hoá trong các trang web trên thường là <strong>HTML entities</strong> (ví dụ: <em>c&amp;aacute;ch thi&amp;#7871;t k&amp;#7871; ph&amp;#7847;n m&amp;#7873;m h&amp;#432;&amp;#7899;ng</em>). Ngoài ra, cũng có những trang web được viết theo bộ chữ Unicode nhưng mã hoá theo HTML entities.
   <br>Với cách mã hoá HTML entities này, hầu như chúng ta không thể đọc-hiểu được file html gốc. Trong khi đó với cách mã hoá UTF-8, chúng ta đọc-hiểu được dễ dàng file html gốc, và khi cần có thể sửa file html bằng <strong>vi</strong> hoặc Windows' notepad.</p>
@@ -272,7 +267,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
