--- a/kinh-nghiem/linh-tinh/bep-2.html
+++ b/kinh-nghiem/linh-tinh/bep-2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bếp (2) (Trang web LHBội)</title>
+<title>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave (2)</title>
 <meta name="description" content="Trang 2: So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, bếp">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/bep-2">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Bếp (2)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,7 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/bep
     </amp-facebook-like>
   </div>
 
-  <h3>Tiết kiệm bao nhiêu?</h3>
+  <h2>Tiết kiệm bao nhiêu?</h2>
   <p>Để biết bếp từ tiết kiệm bao nhiêu so với bếp ga, hãy bấm <a href="https://docs.google.com/spreadsheet/ccc?key=0Av98IPxo40-3dEg0S0F0WWZMX2Y1bllOTW82Tzd1N0E&amp;usp=sharing" target="_blank">vào đây</a> để mở bảng tính. Bạn hãy tự điền vào <span class="red">các ô màu đỏ</span> trong bảng tính để xem bạn <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a> được bao nhiêu với bếp điện cảm ứng, lò microwave (<em>thực ra thì dùng lò microwave còn tiết kiệm hơn con số tính được vì các món nấu bằng lò microwave cần rất ít nước so với nấu bằng các loại bếp, nên tốn ít năng lượng hơn</em>).</p>
   <p>Nếu trong nhà có dùng máy <a href="may-lanh">ĐHNĐ</a>, thì xem cột bên phải để biết mức độ tốn điện chạy máy lạnh và mức tiết kiệm giữa các loại bếp.</p>
   <p>Các bạn có thấy mâu thuẫn không khi dùng gas để đốt nóng trực tiếp lại đắt hơn dùng điện. Nếu là thủy điện thì không có gì mâu thuẫn cả vì giá thủy điện rất thấp. Nhưng với điện phát ra từ gas mà cũng rẻ hơn đốt gas thì thật là lạ. Đó là vì hiệu suất của nhà máy nhiệt điện <a href="https://en.wikipedia.org/wiki/Combined_cycle" target="_blank">chu trình kết hợp</a> dùng gas có thể lên đến 59%, nhân với hiệu suất 90% của bếp điện cảm ứng từ được khoảng 54%, vẫn cao hơn hiệu suất bếp gas, và nhà máy điện mua gas với giá sỉ rẻ bằng nửa gas mua lẻ.</p>
@@ -277,7 +271,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
