--- a/kinh-nghiem/linh-tinh/bep.html
+++ b/kinh-nghiem/linh-tinh/bep.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bếp (Trang web LHBội)</title>
+<title>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</title>
 <meta name="description" content="So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, bếp">
 <link rel="canonical" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/bep">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/bep
     </amp-facebook-like>
   </div>
 
+  <h1>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</h1>
   <p>Những tiện nghi trong cuộc sống của con người đã thay đổi theo thời gian. Bếp nấu cũng vậy, từ bếp củi, bếp than, bếp dầu, bếp ga chuyển sang bếp điện. Chi phí sử dụng tăng dần từ bếp củi đến bếp ga, nhưng lại giảm khi từ bếp ga chuyển sang bếp điện từ. Bài viết này tính mức tiết kiệm khi đổi từ bếp ga sang bếp điện từ.</p>
   <p>Những đại lượng có liên quan đến năng lượng, và mối liên hệ giữa chúng:</p>
   <ul>
@@ -288,7 +283,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
