--- a/kinh-nghiem/linh-tinh/dien-standby.html
+++ b/kinh-nghiem/linh-tinh/dien-standby.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Điện standby (Trang web LHBội)</title>
+<title>Điện standby tốn bao nhiêu?</title>
 <meta name="description" content="Hãy đừng để các thiết bị điện tử standby! Lượng điện tiêu tốn khi standby rất đáng kể." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/dien-standby">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Điện standby</div>
-  <div class="right">Tháng Ba, 2016</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/dien-standby
     </amp-facebook-like>
   </div>
 
+  <h1>Điện standby tốn bao nhiêu?</h1>
+  <div class="right">Tháng Ba, 2016</div>
   <h3>Mỗi năm người Việt Nam đốt bỏ 10 bệnh viện như thế nào?</h3>
   <p>Chắc chắn là bạn chưa hề nghe tin đốt bỏ một bệnh viện nào ở Việt Nam, nhưng chuyện đó đang xảy ra theo một cách khác.</p>
   <div>
@@ -317,7 +312,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
