--- a/kinh-nghiem/linh-tinh/hong-ngoai.html
+++ b/kinh-nghiem/linh-tinh/hong-ngoai.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Hồng ngoại (Trang web LHBội)</title>
+<title>Chơi với tia hồng ngoại</title>
 <meta name="description" content="Ghi chép vài thí nghiệm với tia hồng ngoại" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/hong-ngoai">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Chơi với tia hồng ngoại</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/hong-ngoai
     </amp-facebook-like>
   </div>
 
+  <h1>Chơi với tia hồng ngoại</h1>
 <p>Máy quay phim Sony có thể thấy và ghi hình được tia hồng ngoại. Nó có một nguồn phát tia hồng ngoại rọi ra phía trước để rọi vào những vật trong bóng tối rồi thu các tia hồng ngoại phản xạ lại. Có thể tắt nguồn phát tia hồng ngoại của máy và thu hình bằng các nguồn phát tia hồng ngoại khác.</p>
 <p>Tối qua, tôi thử tắt nguồn tia hồng ngoại của máy quay, đặt nó trong phòng tối. Để bàn tay trước ống kính, tất nhiên là chẳng thu được gì. Hướng một cái điều khiển TV vào bàn tay, cách chừng 10cm, bấm đại nút nào đó trên cái điều khiển TV: một bàn tay trắng toát hiện ra trong máy quay phim.</p>
 <div><amp-img src="/images/dsc008996859.jpg" width="1152" height="864" layout="responsive"></amp-img></div>
@@ -275,7 +270,7 @@ data-ad-slot="3830899615">
 <p>Không cần chờ đến tối vẫn có thể thu được hình hồng ngoại bằng cách gắn trước ống kính một kính lọc chỉ cho tia hồng ngoại đi qua và ngăn ánh sáng thấy được. Có thể làm một kính lọc như vậy một cách rẻ tiền từ những đoạn đầu cuộn phim chụp hình đã tráng. Đoạn đầu cuộn phim thường có một vài khung không lộ sáng do người dùng cố ý bấm máy mà không mở ống kính để bỏ đoạn đầu. Sau khi tráng, đoạn đầu đó sẽ có màu đen, không cho ánh sáng thấy được đi qua nhưng lại cho tia hồng ngoại đi qua.</p>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
