--- a/kinh-nghiem/linh-tinh/may-lanh-3.html
+++ b/kinh-nghiem/linh-tinh/may-lanh-3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Máy lạnh (3) (Trang web LHBội)</title>
+<title>Hiểu rõ Máy lạnh (3)</title>
 <meta name="description" content="Trang 3: Những điều cần biết để dùng máy lạnh hiệu quả, an toàn" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/may-lanh-3">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Máy lạnh (3)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,7 @@ https://lehboi.github.io/kinh-nghiem/linh-tinh/may-lanh
     </amp-facebook-like>
   </div>
 
-  <h3>Một kinh nghiệm làm nguội giàn nóng</h3>
+  <h2>Một kinh nghiệm làm nguội giàn nóng</h2>
   Ở nhà tôi có một máy lạnh cỡ 18.000BTU/h kiểu rời. Giàn lạnh của máy đặt trong phòng sinh hoạt chung của nhà; phòng sinh hoạt chung này có thể tích khoảng 180m³, rất thích hợp cho máy lạnh cỡ này. Giàn nóng đặt trong cái khoang nhỏ chừng 2m rộng, 1,5m cao, 0,7m sâu. Cái khoang đó có một mặt thoáng, mặt đó chỉ có 1 khoảng lá sách cao chừng 0,45m nằm theo chiều rộng để thông gió, trên khoảng đó lợp kính mờ (xem hình dưới).
   <p>Thiết kế cái khoang để giàn nóng máy lạnh như vậy để che ống và dây điện, tạo vẻ đẹp bên ngoài cho chung cư, nhưng khoảng lá sách quá nhỏ và thấp không đủ để thoát hơi nóng khi máy hoạt động. (Nhà này kiểu có gác nên chiều cao của khoang chỉ có 1,5m. Những nhà kiểu không có gác thì cái khoang đó cao hơn và có thêm khoảng lá sách trên khoảng lợp kính nên hơi nóng thoát ra được bằng sự đối lưu.)</p>
   <p>Vì kín như vậy nên khi máy lạnh chạy, quạt thổi giàn nóng chỉ thổi được một ít không khí nóng thoát ra ngoài, <i>phần lớn</i> không khí nóng luẩn quẩn trong khoang, chừng 30 phút sau là nhiệt độ trong khoang tăng lên đến mức máy nén tự ngừng, chỉ còn quạt tiếp tục thổi giàn nóng. Máy nén ngừng chạy thì trong nhà không mát nữa. Tôi đã dịch giàn nóng về phía lá sách hết cỡ, còn cách chừng 8cm, vẫn không thoát nhiệt kịp. Mỗi lần bị rơi vào tình trạng đó là phải tắt máy, đợi chừng một giờ cho giàn nóng nguội hẳn rồi mới mở máy lại, thật là khổ!</p>
@@ -284,7 +278,7 @@ data-ad-slot="3830899615">
   <div class="center">sang trang <a href="may-lanh">1</a> - <a href="may-lanh-2">2</a> - 3</div>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
