--- a/y-kien/khac-nguoi.html
+++ b/y-kien/khac-nguoi.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Khác người (Trang web LHBội)</title>
+<title>Khác người</title>
 <meta name="description" content="Có nên cư xử khác người? Cư xử khác người như thế nào?" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/khac-nguoi">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Khác người</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/y-kien/khac-nguoi
     </amp-facebook-like>
   </div>
 
+  <h1>Khác người</h1>
 <p>Trong xã hội mà tôi đang sống, phần lớn người ta đều hành xử giống đám đông chung quanh (vậy mới tạo thành đám đông). Tạm gọi những người thường làm theo đám đông là loại thứ nhất.
 <br>Cũng có một ít người làm khác đám đông. Nhưng làm khác đám đông thì có hai kiểu: làm tốt hơn và làm xấu hơn.
 <br>Có <b>rất ít</b> người không thấy <b>ngại ngùng</b> khi làm việc gì tốt hơn những người khác, ví dụ như cầm rác trên tay đến khi gặp thùng rác mới bỏ vào thay vì vứt luôn xuống đường cho tiện. Tạm gọi những người không biết ngại này là loại thứ hai.
@@ -271,7 +266,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
