--- a/y-kien/nhung-cai-nem.html
+++ b/y-kien/nhung-cai-nem.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Những cái nêm (Trang web LHBội)</title>
+<title>Những cái nêm</title>
 <meta name="description" content="Cái nêm là gì? Ai đã tạo ra những cái nêm trên đường phố" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/nhung-cai-nem">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Những cái nêm</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/y-kien/nhung-cai-nem
     </amp-facebook-like>
   </div>
 
+  <h1>Những cái nêm</h1>
 <p>Tôi tin là nhiều người chưa biết <b>cái nêm</b> là cái gì.
 <br>Cái nêm là một vật hình lăng trụ, mặt đáy là hình tam giác có một góc nhọn khoảng dưới 30° (tức là nhỏ hơn 1/3 góc vuông, không phải là nhỏ hơn 30°C, không ghi kỹ vậy thì nhiều người không hiểu đâu), hai cạnh của góc nhọn đó dài hơn cạnh còn lại vài lần.
 <br>Công dụng của cái nêm là giữ cho một thứ gì đó ở yên một chỗ giữa hai bề mặt bằng lực ma sát. Cách dùng của cái nêm như sau: đưa góc nhọn của cái nêm vào khe hở giữa vật cần giữ cố định và một mặt phẳng, dùng lực đẩy cho cái nêm vào sâu trong khe hở hết mức. Khi cái nêm càng vào sâu trong khe hở, hai mặt bên góc nhọn của nó ép mạnh lên mặt phẳng và vật cần giữ, lực ép càng mạnh thì lực ma sát giữa các bề mặt càng lớn làm cho các bề mặt đó khó trượt khỏi nhau. Kích thước của cái nêm tương xứng với vật mà nó phải giữ.</p>
@@ -272,7 +267,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
