--- a/y-kien/su-giau-co.html
+++ b/y-kien/su-giau-co.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Các nguồn gốc của sự giàu có (Trang web LHBội)</title>
+<title>Các nguồn gốc của sự giàu có</title>
 <meta name="description" content="Các nguồn gốc của sự giàu có, công thức làm giàu dành cho tất cả mọi người" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, nguồn gốc, giàu có">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/su-giau-co">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Các nguồn gốc của sự giàu có</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/y-kien/su-giau-co
     </amp-facebook-like>
   </div>
 
+  <h1>Các nguồn gốc của sự giàu có</h1>
 <p>Khi nói về một người rất giàu, bạn thường nghe những câu như "nhà đó giàu lắm, có của ăn mấy đời không hết". Tại sao lại có người giàu như vậy?
 <br>Có nhiều nguồn gốc của sự giàu có:</p>
 <ol><li>sinh ra trong một gia đình giàu có: giàu ngay từ lúc mới sinh</li>
@@ -295,7 +290,7 @@ Các bài liên quan:
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133515857462669312" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375546082611006" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
